--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
@@ -220,9 +221,9 @@
 <div id="协同-24" class="section level4 hasAnchor" number="6.1.1.3">
 <h4><span class="header-section-number">6.1.1.3</span> 协同<a href="侦查系.html#协同-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>情侣<a href="#fn10" class="footnote-ref" id="fnref10"><sup>10</sup></a>（横炮）：风刃开场获得一格能量的17.5~80%。</li>
-<li>剑圣：这时就幸亏风刃是侦查了，不然四个剑圣有三个战士，很难组队。</li>
-<li>城市演讲者<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a>（亡灵天尊）：风刃剑刃攻击获得的能量+2~8%</li>
+<li>情侣<a href="#fn13" class="footnote-ref" id="fnref13"><sup>13</sup></a>（横炮）：风刃开场获得一格能量的17.5~80%。</li>
+<li>剑圣：这时就幸亏风刃是侦查了，不然如果四个剑圣三个都是战士的话，很难组队。</li>
+<li>城市演讲者<a href="#fn14" class="footnote-ref" id="fnref14"><sup>14</sup></a>（亡灵天尊）：风刃剑刃攻击获得的能量+2~8%</li>
 </ul>
 </div>
 <div id="短板-25" class="section level4 hasAnchor" number="6.1.1.4">
@@ -397,7 +398,7 @@
 <li>后闪时开始充近战buff，最多10层，充能时有概率规避攻击，充能途中被击中/出规避或者警车主动前冲则打断充能，在6秒内警车拥有近战buff。</li>
 <li>警车的技能中没有写明，但他的远程小枪是有概率晕的。根据扒出来的数据显示，平时一梭子弹里的第一发有10%的概率晕1.5秒，充能时开枪则概率上升到80%。</li>
 <li>S1：这应该是游戏中价值最高的S1之一，能与之抗衡的只有震荡波和斗擎。因为此招命中会迅速地削减对方大量能量，5阶的警车一次砍掉对方36.4%，对方气红的危急时刻可以迅速变成只剩S1。</li>
-<li>S2：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。另外，这个技能可以触发小黄蜂的近战规避，要小心<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>。</li>
+<li>S2：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。另外，这个技能可以触发小黄蜂的近战规避，要小心<a href="#fn15" class="footnote-ref" id="fnref15"><sup>15</sup></a>。</li>
 <li>S3：跟优秀的S1/S2比没有太多用武之地。能量锁定虽然有16秒，但在动画中就消耗了不少时间。但有时也会因为躲在屏幕一边打相持没找到机会连S1或者S2，充气又太快到了S3，也不失为一种放心输出的机会。</li>
 </ul>
 </div>
@@ -430,7 +431,7 @@
 <li>等敌人被S1击倒后，用小枪节奏的变换牵制。把节奏控制在敌人起身后点一枪，看到侧闪再点两枪，让敌人轻易过不来，然后buff消失马上后闪。</li>
 <li>击倒前冲压制。根据经验，对方起身没有S技的时候，前冲压起身有7成的概率可以直接打中（因为对方起身会侧闪/出招/重击），如果对方靠在版面下边缘，概率有90%会侧闪并被击中。即使不被打中，也多会防御。打中的话就5连打完后闪，下一次充能就开始了，防御就四连一重击，圣贤时间也拖延完了。而如果是在盟战三厅，很可能5连后又有一个S1，再继续前冲压起身……当然，这个技巧对震击格挡模块，搅拌者、天火和恐龙勇士禁用。</li>
 </ol></li>
-<li>觉醒等级的问题：100觉醒的警车10层充能加40%的气，再配合他的点枪连击，很容易溢出到S2，仓促放S1容易造成定序器精通无法触发和充满加成的近战少打几下，同时失去循环往复的节奏感。30~50觉醒的警车的加气比例反而更容易打出全场0封对手S技的套路。当然这并不是说100觉醒就没用，而是玩家要了解自己警车在充能中获得的能量比例，也要了解一套点枪连击到底加多少气，来合理促成S1循环，例如觉醒特别高的时候，近战两三拳就可以出S1了；气到了1.5格的时候，就要找机会直接放掉S1而不是再充一次造成溢出。警车在对战时最擅长的就是控制对手，而最容易坑到自己的就是因为S1不能及时到手，而失去节奏的控制。</li>
+<li>招牌等级的问题：100觉醒的警车10层充能加40%的气，再配合他的点枪连击，很容易溢出到S2，仓促放S1容易造成定序器精通无法触发和充满加成的近战少打几下，同时失去循环往复的节奏感。30~50觉醒的警车的加气比例反而更容易打出全场0封对手S技的套路。当然这并不是说100觉醒就没用，而是玩家要了解自己警车在充能中获得的能量比例，也要了解一套点枪连击到底加多少气，来合理促成S1循环，例如觉醒特别高的时候，近战两三拳就可以出S1了；气到了1.5格的时候，就要找机会直接放掉S1而不是再充一次造成溢出。警车在对战时最擅长的就是控制对手，而最容易坑到自己的就是因为S1不能及时到手，而失去节奏的控制。</li>
 </ul>
 </div>
 <div id="基地防守-28" class="section level3 hasAnchor" number="6.4.3">
@@ -450,8 +451,8 @@
 <div id="能力-29" class="section level4 hasAnchor" number="6.5.1.1">
 <h4><span class="header-section-number">6.5.1.1</span> 能力<a href="侦查系.html#能力-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>后闪获得近战规避加成，触发规避后消失。注意：会规避警车的S2。这让小黄蜂作为敌人的时候特别难缠。</li>
-<li>侧闪获得暴击率加成（+20~28%），最多攒三个，打中对方时（无论近战/远程，无论是否暴击）每次消耗一个。</li>
+<li>后闪获得近战规避加成（24~32%，触发规避后消失。注意：会规避警车的S2。这让小黄蜂作为敌人的时候特别难缠。</li>
+<li>侧闪获得暴击率加成（20~28%），最多攒三个，打中对方时（无论近战/远程，无论是否暴击）每次消耗一个。</li>
 <li>暴击会瓦解任何护盾并施加5秒震击。这让小黄蜂对付多个科技系角色游刃有余，并且他还能打破能量晶体护盾这种变态模块，把本来烦死人的拉锯战变回到竞技场难度。</li>
 <li>S1提升60%的暴击伤害，配合小黄蜂可以攒到的三个暴击率加成，在连S技时的技巧是打一到两拳马上跟S1，否则S1打不出暴击就亏了。</li>
 <li>S2伤害不俗并锁气10秒，配合招牌，可以连续对敌人形成不错的控制。</li>
@@ -502,36 +503,50 @@
 <div id="特点分析-30" class="section level3 hasAnchor" number="6.6.1">
 <h3><span class="header-section-number">6.6.1</span> 特点分析<a href="侦查系.html#特点分析-30" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>反冲在大师难度前发布，当时有人发布了用高觉醒碎骨魔站着不动让反冲Boss打，结果反而赢得比赛的视频，迅速给大家“反冲垃圾”的印象，也让官方咬牙切齿的为后续的特殊任务研究了一个“流血免疫”模块来反制。很长一段时间基本上没有人去研究反冲优秀的能量控制能力——</p>
-<p>直到气天尊的出现。</p>
+<p>……直到气天尊的出现。</p>
 <div id="能力-30" class="section level4 hasAnchor" number="6.6.1.1">
 <h4><span class="header-section-number">6.6.1.1</span> 能力<a href="侦查系.html#能力-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>每次近战和飞镖暴击能给对手打出能量流失。但假如你认为就这样就能控制对方的气那就错了——流量流失的比例相当低，你一套近战下去，对方能量肯定还是往上走的更多。当然，这倒是可以很有效的让对方的S3始终充不满，可另一方面长达10秒的能量流失也给了那些满一格气就能获得技能的对手（狂飙，蝎子，震天尊）更多的触发技能的机会——充满一格、减到一格以下、再充满、再减……</li>
-<li>所以说在对方身上有多层能量流失的时候，最好用S1把它们转化为震击获取很好的输出。尤其是面对身上有能量流失的对手，反冲自己的能量功率+50%，所以弄一个S1很容易。S2加暴击率后运气好会施加很多层能量流失，可以配合下一个S1打输出。</li>
-<li>S3根据对方能量流失的层数每层回3%的血，最好用普通技铺垫足够能量流失，再加上S3动画中的几次攻击，方可最大化续航。</li>
-<li>重击可以清除掉对方身上所有的能量提升效果，并且清除自己身上的震击和能量减少效果，按处理掉的效果个数转换为自己的能量。所以在面对机器人资源模块的时候，反冲一个重击就能解决掉，让气天尊回到震天尊的水平。面对震击格挡的模块，反冲也一点都不怕。理论上反冲对付盟战的2厅2线和3星2线应该是游刃有余，但是因为基础能力太差，所以很少有人带上盟战。</li>
-<li>前冲时被对方闪避会获得规避，这样反冲扑空的时候安全系数大大提高。而面对反冲对手的时候，侧闪反击就不灵了。</li>
+<li>能量流失
+<ul>
+<li>每次近战和飞镖暴击有60%的概率能给对手施加能量流失，长达10秒。因为耗时比较长，所以会给人印象没有警车的能量燃烧这么有效，甚至不如震荡波一个S1下去。这种缓慢的能量流失从本身来说最有用的是可以让对方的S3始终充不满。弊端就是给了那些满一格气就能获得技能的对手（狂飙，蝎子，震天尊）更多的触发技能的机会——充满一格、减到一格以下、再充满、再减……但这种设计更多还是为了配合反冲其他技能，因为反冲的暴击率相当可以，随随便便给敌人挂上几层能量流失。</li>
+<li>打击能量流失中的对手，反冲的能量功率加50%</li>
+</ul></li>
+<li>S技各有妙用
+<ul>
+<li>S1可以把能量流失的层数转化为震击层数，获取很好的输出</li>
+<li>S2首先提升30%的暴击率8秒，旋风翅膀斩出暴击可以100%施加多层能量流失与流血，是输出和控制俱佳的技能，配合S1的转化可以更大程度地输出</li>
+<li>S3根据对方能量流失的层数每层回3%的血，经测试最大只能用6层，也就是回18%，多余的能量流失依然会保留在对方那边。但这已经是很可观的回血了，大大弥补了反冲身板脆的弱点。</li>
+</ul></li>
+<li>反冲的重击是科技系的噩梦：命中对方时可以清除掉对方身上所有的能量提升效果（主要是紫色能量增加和能量功率增加），并且不管是否命中，都清除自己身上的震击和能量减少（能量流失，能量锁定，能量功率降低，甚至还有热破的减速）效果，并按处理掉的效果个数转换为自己的能量，每一效果变成自己总能量槽的6%（6阶的效果）。所以在面对机器人资源模块的时候，反冲一个重击就能解决掉，让气天尊回到震天尊的水平；面对震击格挡的模块，反冲也一点都不怕。但是近战打犀牛时如果吃到反震要考虑一下：如果四连击内能把盾全部打掉，那就打掉盾再重击清除，否则急于重击的结果很可能是重击又吃一个反震，还得再重击一次。</li>
+<li>前冲时被对方闪避会获得30%多概率的规避，由于反冲重击回弹比较大，压起身有时会扑空，规避能一定程度上防止对方打回头。而我方面对反冲对手的时候，侧闪反击就要注意了。</li>
+<li>8.4版本中给反冲自带了55%的概率规避近战重击，这明显是加强了电脑反冲。</li>
 </ul>
 </div>
 <div id="招牌-29" class="section level4 hasAnchor" number="6.6.1.2">
 <h4><span class="header-section-number">6.6.1.2</span> 招牌<a href="侦查系.html#招牌-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>概率触发变形齿轮破坏，此时对方的能量功率降低30%，持续10秒，并且在这个过程中如果变形的话会直接晕掉（与其说是变形还不如说就是重击，因为声波重击过程中不变形也会晕，录音机S1变形也不会晕）。初始概率1/3左右。由于反冲的重击回弹破绽大，所以不宜滥用，适合对付一些重击非常容易预测的对手，比方说声波或者出霸体的爆威。</p>
+<p>概率触发变形齿轮破坏，此时对方的能量功率降低30%，持续10秒，并且在这个过程中如果变形的话会直接晕掉（与其说是变形还不如说就是重击，因为声波重击过程中不变形也会晕，录音机S1变形也不会晕）。初始概率1/3左右。</p>
+<p>这个技能其实作用不大，因为反冲的轻连击和中连击都是脚踢的动作结束，脚踢攻击加30%的暴击率，对于反冲来说显然更适合5连而不是4连加重击。再说重击回弹的破绽也大，所以不宜滥用。重击都要少用，那出不出招牌就更加随缘了。出了招牌后，对方也不知道什么时候会变形，突然晕在那里也容易打乱自己的节奏。所以招牌也就适合对付那些重击非常容易预测的对手，比方说声波或者出霸体的爆威，或者蹒跚模块。</p>
 </div>
 <div id="协同-29" class="section level4 hasAnchor" number="6.6.1.3">
 <h4><span class="header-section-number">6.6.1.3</span> 协同<a href="侦查系.html#协同-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>反冲与汽车大师和喷气机在一起可以让减益时间延长且不能净化。这种两两隔开一个类别三角阵型，如果不是反冲和喷气机的平庸，本来应该是很好的搭配。</p>
 <ul>
+<li>执行者（双向：汽车大师，喷气机）：减益时间延长40%且不能净化。这对反冲来说是很大的提升。首先10秒变14秒给了反冲更大的能量优势，减益不可净化也让他面对觉醒钢锁时的输出更放心。</li>
+<li>盟友（双向）：声波，雷震，狂飙</li>
+<li>敌人（双向）：警车，钢锁，天火</li>
 <li>飞过山：2~8%攻击加成</li>
 </ul>
 </div>
 <div id="短板-30" class="section level4 hasAnchor" number="6.6.1.4">
 <h4><span class="header-section-number">6.6.1.4</span> 短板<a href="侦查系.html#短板-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>很多玩家和本人都感觉反冲的移动速度略慢、操作手感粘滞。重击的后空翻破绽和犀牛一样大，对手后闪掉可以直接出近战把他从天上“抓”下来。另外飞镖算物理攻击也让他在对付通天晓的时候比较苦手。做为血量排名全人物倒数第二的角色，用来保命的规避只在前冲扑空时会触发。</p>
-<p>其实反冲很根本的问题还在于输出/控气/续航三种因素都和能量流失挂钩，打法费脑，容易顾此失彼。反冲可能更适合战略部署或者突袭中对抗机器人资源和科技控制台。不过由于8.0预计要加强反冲，所以后续是否翻身，还有待检验。</p>
+<p>很多玩家和本人都感觉反冲的移动速度略慢、操作手感粘滞。重击的后空翻破绽和犀牛一样大，对手后闪掉可以直接出近战把他从天上“抓”下来。另外飞镖算物理攻击也让他在对付通天晓的时候比较苦手：反冲所有的技能中只有S1那一道电光是能量攻击。血量非常低，排名全人物倒数第二。</p>
 </div>
 <div id="调整-5" class="section level4 hasAnchor" number="6.6.1.5">
 <h4><span class="header-section-number">6.6.1.5</span> 8.0调整<a href="侦查系.html#调整-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>S2的翅膀攻击增加施加流血的特点（能量流失能力也保留）。提升基础暴击率和暴击伤害。让反冲实力倍增。</p>
+<ul>
+<li>提升基础暴击率和暴击伤害。</li>
+<li>S2的翅膀攻击在能量流失之外，新增可以施加流血。</li>
+</ul>
 </div>
 </div>
 <div id="推荐打法-30" class="section level3 hasAnchor" number="6.6.2">
@@ -542,7 +557,8 @@
 </div>
 <div id="长战斗-26" class="section level4 hasAnchor" number="6.6.2.2">
 <h4><span class="header-section-number">6.6.2.2</span> 长战斗<a href="侦查系.html#长战斗-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>基本套路参考短战斗。如果要续航就直接充满3格气、打出能量流失、再发S3。反冲的招牌在实战中不宜刻意追求，万一触发了，要利用好对方能量功率降低的特点猛攻。</p>
+<p>长战斗中稳扎稳打，先保证对方身上有能量流失，这样来气比较快，然后视情况选择S技。S1基本上在长战斗中不用。用S2还是S3取决于自身的血量，血量比较乐观的情况下用S2，要用S3前宁可多等一下，等到挂上4~5层能量流失再出手。</p>
+<p>重击千万少用，只适合在破防，净化和处理对方比较吓人的能量提升时使用。</p>
 </div>
 </div>
 <div id="基地防守-30" class="section level3 hasAnchor" number="6.6.3">
@@ -578,11 +594,11 @@
 <h4><span class="header-section-number">6.7.1.2</span> 招牌<a href="侦查系.html#招牌-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>这是一个面面俱到的神奇招牌：</p>
 <ul>
-<li>首先是阻止对方触发能力<strong>的效果</strong>。具体来说，就算能力图标会出现，但是不起效果，比如声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。震天尊的白球是不能阻止他无敌的。其他大部分能力如回血、DOT都是可以阻止的。</li>
+<li>首先是阻止对方触发能力<strong>的效果</strong>。具体来说，就算能力图标会出现，但是不起效果，比如声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。震天尊的白球是不能阻止他无敌的。其他大部分能力如回血、DOT都是可以阻止的。另外要注意：<strong>不会阻止模块带来的效果</strong>，比如夜莺触发的规避。</li>
 <li>其次是招牌过程中打穿对手所有减伤，之前写的是护甲、护盾，但不知道何时改成了只有护甲。总之猩猩引以为傲的抗暴护甲，黄豹一个S2就能保证输出。</li>
 <li>招牌有效期内黄豹的攻击不会被规避，所以连接S技是非常稳的。</li>
 <li>招牌有效期内黄豹自己有概率规避，让黄豹有招牌的时候可以更加莽撞。</li>
-<li>这前面几个特性是与觉醒等级无关，觉醒等级只是影响暴击率（10~40%）。所以几乎只要觉醒一次，就把黄豹隐藏的能力彻底解锁。</li>
+<li>这前面几个特性是与招牌等级无关，招牌等级只是影响暴击率（10~40%）。所以几乎只要觉醒一次，就把黄豹隐藏的能力彻底解锁。</li>
 </ul>
 <p>但是注意，招牌有效期就4秒，并不是很长。</p>
 </div>
@@ -614,7 +630,7 @@
 </div>
 <div id="基地防守-31" class="section level3 hasAnchor" number="6.7.3">
 <h3><span class="header-section-number">6.7.3</span> 基地防守<a href="侦查系.html#基地防守-31" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>黄豹的AI想必打盟战的都见识过，配夜莺能让他的暴发和不可预测性进一步加强，配流血还能让他的S1长时间防止回血，对斗擎是致命的打击。</p>
+<p>黄豹配夜莺能让他的暴发和不可预测性进一步加强，配流血还能让他的S1长时间防止回血，对斗擎是致命的打击，配过滤器可以增加健壮性。</p>
 <!--/Note-->
 </div>
 </div>
@@ -677,16 +693,94 @@
 <h3><span class="header-section-number">6.8.3</span> 基地防守<a href="侦查系.html#基地防守-32" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>加强暴击和规避的夜莺很适合爵士，侦查哨兵也能有效提升他的暴击和能量控制。</p>
 <!--/Note-->
+</div>
+</div>
+<div id="滑流" class="section level2 hasAnchor" number="6.9">
+<h2><span class="header-section-number">6.9</span> 滑流<a href="侦查系.html#滑流" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><img src="img/51%20-%20Slipstream_Icon.jpg" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-35-1.png" width="480" /></p>
+<!--Note-->
+<div id="特点分析-33" class="section level3 hasAnchor" number="6.9.1">
+<h3><span class="header-section-number">6.9.1</span> 特点分析<a href="侦查系.html#特点分析-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>游戏的第三位女性人物登场！</p>
+<p>4月卡邦在一次孩之宝活动中公布了补天士，没想到在9.1.0新的启动画面上，滑流和补天士同时出现，并且先于补天士登场。在变形金刚作品中，滑流最早登场于变形金刚08动画，是红蜘蛛火种分裂的产物之一。后续登场于《变形金刚：传奇》卡牌游戏、《塞伯志》动画和IDW 2.0漫画宇宙中，戏份逐渐加多，也确立了她与风刃的敌对关系。</p>
+<div id="能力-33" class="section level4 hasAnchor" number="6.9.1.1">
+<h4><span class="header-section-number">6.9.1.1</span> 能力<a href="侦查系.html#能力-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>滑流的身材异常娇小（但是血量却安排到了侦查系第二，仅次于警车的水平），机体和载具都是风刃的重涂，但由于没有拿剑，感觉比风刃还要小。动作依然是混搭式设计，普通拳脚能看到热破的飞踢，红蜘蛛的抡拳，大黄蜂的二段脚等，S技也是效仿已有角色。玩家们对新动作、新S技的期待，又落到了补天士身上。</p>
+<ul>
+<li>对方身上每个减益给滑流10%的概率规避对方重击，最大90%。除了防止被声波和蝎子逼墙角，没什么价值的能力。更何况——</li>
+<li>滑流和风刃一样可以用重击穿过对方远程攻击，不怕逼墙角。重击命中100%获得15%的暴击伤害7秒，可以刷新（实测中，就算快命中时对方后闪也算命中，会刷新）。</li>
+<li>远程小枪100%驱散一个护盾。打犀牛虽然没有小黄蜂那么爽快，打能量晶体护盾模块还是杠杠的。面对声波的护盾时，估计也是先算会不会反弹，不会反弹才驱散。30%的概率获得20%的加攻5秒（命中才行，打空和防住不行），这就比较有用了，会让点两枪后的5连和S技提升伤害。</li>
+<li>中等连击第二下：
+<ul>
+<li>净化所有震击伤害并且给对方送回一层震击，60%的攻击8秒。看来依然可以很放心地打犀牛，被反震了也可以马上以牙还牙。</li>
+<li>加10%的暴击率6秒，可惜这个6秒内再次打中不能刷新</li>
+</ul></li>
+<li>背刺：
+<ul>
+<li>出暴击时有概率施加给对手一个背刺减益，但滑流身上有减益时无法施加</li>
+<li>背刺的效果在以下三种减益中循环（循环的意思是这次施加了一种，下一次就施加下一种），运气好的话，一串连击下来三个减益都会挂上
+<ul>
+<li>8秒的20%暴击抗性降低，最大1层</li>
+<li>8秒的30%能量功率降低，最大1层</li>
+<li>8秒的逆火，最大1层</li>
+</ul></li>
+</ul></li>
+<li>S技：
+<ul>
+<li>S1：大黄蜂S1的动作。最后一击有20%的概率施加修复阻止6秒（如果出暴击则为10秒），对方身上每个减益增加10%的概率。没有黄豹那么稳，但对付回血技能和模块，实用性也不错了。</li>
+<li>S2：阿尔茜S2的动作改出来的。第一击有50%的概率施加能量锁定<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>5秒，出暴击则为9秒。</li>
+<li>S3：风刃的S3动作。施加三层逆火15秒，且不能被净化。60%的概率施加能量流失，12秒内扣减对方总能量的25%。因为有长时间的能量流失，可以全力进攻不怕打红，逼对方用S2来吃逆火大伤害。</li>
+</ul></li>
+</ul>
+<p>滑流的发布很惊艳，但是一发布就有bug：小枪不是飞全屏的，在电脑面前有时会消失，有时会穿过对手，经常打不着！</p>
+</div>
+<div id="招牌-32" class="section level4 hasAnchor" number="6.9.1.2">
+<h4><span class="header-section-number">6.9.1.2</span> 招牌<a href="侦查系.html#招牌-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p><strong>寻找弱点</strong>：远程攻击和轻攻击有1~50%的概率刷新对方身上的一层减益（哪一层？最快过期的还是最新施加的？）。如果对方身上减益数少于4，则概率提升20%。这个招牌将可以比较好地把减益留在对方身上，提升她S1出修复阻止的概率。</p>
+<p>个人感觉，好消息是敌人用不好这个招牌，坏消息是玩家手上也没什么太用处。</p>
+</div>
+<div id="协同-32" class="section level4 hasAnchor" number="6.9.1.3">
+<h4><span class="header-section-number">6.9.1.3</span> 协同<a href="侦查系.html#协同-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<ul>
+<li>竞争者（双向：风刃）：加暴击率</li>
+<li>空中霸主（双向：红蜘蛛，碾碎器，喷气机）：对空中载具形态的对手时加攻</li>
+<li>破坏专家（双向：路障，巨蝎勇士，爵士）：加逆火伤害。不过在游戏中有bug：爵士变成了反冲。</li>
+</ul>
+<p>滑流的协同也一般般，形成协同的总共就7个，就有3个侦查系的。滑流是游击的一员（在某些作品中还是游击的领袖），却没有跟红蜘蛛有游击小队协同——本来正好补齐了6系游击，难道最后一位非要留给冲锋（Thrust）吗？</p>
+</div>
+<div id="短板-33" class="section level4 hasAnchor" number="6.9.1.4">
+<h4><span class="header-section-number">6.9.1.4</span> 短板<a href="侦查系.html#短板-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>滑流虽然属于惊喜型的发布，但是上手后感觉没有太多可圈可点之处，对于高手如林的侦查系来说，没有亮点就是最大的短板了。三个背刺的buff比起侦查其他人实实在在的偷气、减气和流血，显得差了点火候。也就逆火实在一点，加上这些本来就是概率性的事件，摊薄在三个方向上就更是隔靴搔痒。控气在S2，来得比较慢不说，比小黄蜂还少了50%的概率，万一没控住呢？S3的三层逆火加能量流失反而成了比较可以追求的输出方向，但S3本身的输出也不高，三格气换三层逆火也有点划不来。</p>
+</div>
+</div>
+<div id="推荐打法-33" class="section level3 hasAnchor" number="6.9.2">
+<h3><span class="header-section-number">6.9.2</span> 推荐打法<a href="侦查系.html#推荐打法-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p><em>由于滑流小枪打不中的bug，在实战中很难有效地进行战术部署，以下经验部分只是凭主观印象写出，后续改好了bug再测</em></p>
+<div id="短战斗-29" class="section level4 hasAnchor" number="6.9.2.1">
+<h4><span class="header-section-number">6.9.2.1</span> 短战斗<a href="侦查系.html#短战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>由于主要的输出和控制在S2上，短战斗还是用标准的5连来攒能量。重击用来破防就好，不要太刻意去拿暴伤buff。</p>
+</div>
+<div id="长战斗-29" class="section level4 hasAnchor" number="6.9.2.2">
+<h4><span class="header-section-number">6.9.2.2</span> 长战斗<a href="侦查系.html#长战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>滑流虽然血量在侦查能逞逞强，但没有规避和减伤，身板还是脆的，只能靠稳扎稳打。她的小枪有概率得到加攻，平时要多注重点枪命中。个人觉得长战斗还是围绕S3打输出比较合适，因为能量流失不容易打红。</p>
+</div>
+</div>
+<div id="基地防守-33" class="section level3 hasAnchor" number="6.9.3">
+<h3><span class="header-section-number">6.9.3</span> 基地防守<a href="侦查系.html#基地防守-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>滑流也没有什么被动能恶心到玩家，因为只要不被打中，她也施加不了减益，也许曲速电池可以让她多放重击？</p>
+<!--/Note-->
 
 </div>
 </div>
 </div>
 <div class="footnotes">
 <hr />
-<ol start="10">
-<li id="fn10"><p>卡邦可能是参考了《领袖的挑战》动画中这两人的关系，然而G1横炮跟风刃就完全没这层关系了。<a href="侦查系.html#fnref10" class="footnote-back">↩︎</a></p></li>
-<li id="fn11"><p>英文原文Cityspeaker，是表示风刃有和泰坦金刚对话的能力，一般译为基地金刚代言人/城语者。<a href="侦查系.html#fnref11" class="footnote-back">↩︎</a></p></li>
-<li id="fn12"><p>指小黄蜂的玩家要小心，因为规避了第一下，很可能吃第二下！<a href="侦查系.html#fnref12" class="footnote-back">↩︎</a></p></li>
+<ol start="13">
+<li id="fn13"><p>卡邦可能是参考了《领袖的挑战》动画中这两人的关系，然而G1横炮跟风刃就完全没这层关系了。<a href="侦查系.html#fnref13" class="footnote-back">↩︎</a></p></li>
+<li id="fn14"><p>英文原文Cityspeaker，是表示风刃有和泰坦金刚对话的能力，一般译为基地金刚代言人/城语者。<a href="侦查系.html#fnref14" class="footnote-back">↩︎</a></p></li>
+<li id="fn15"><p>指小黄蜂的玩家要小心，因为规避了第一下，很可能吃第二下！<a href="侦查系.html#fnref15" class="footnote-back">↩︎</a></p></li>
+<li id="fn16"><p>官方公告写的是施加能量锁定，游戏中人物信息写错成能量功率降低，英文版中文版都是错的<a href="侦查系.html#fnref16" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
