--- a/chars_book/对战ai策略.html
+++ b/chars_book/对战ai策略.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
@@ -334,8 +335,8 @@
 </div>
 <div id="对战ai巨蝎勇士" class="section level3 hasAnchor" number="10.3.7">
 <h3><span class="header-section-number">10.3.7</span> 对战AI巨蝎勇士<a href="对战ai策略.html#对战ai巨蝎勇士" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>蝎子的AI非常诡异，血槽特别长，再配上自己的回血能力和极为难躲的重击，让他十分难缠。电脑蝎子比较龟，平时不会贸然前冲，相持过程中要找他点枪的硬直冲过去打他。</p>
-<p>战斗长了之后，蝎子身上一堆毒液就成了核威慑一样的存在，一不留神撞上一个重击，就只能硬着头皮在震击出来之前能干多少血干多少了。所以有净化震击能力的钢锁，动物园组合，或者直接能净化毒液的惊天雷是首选。“腐朽的堡垒”盟战里面有一个带定时回血的蝎子一直是玩家的噩梦，有些玩家直接用高觉醒残血的汽车大师快速解决战斗，也不失为一种策略。</p>
+<p>蝎子出得较晚，AI非常诡异，经常在远程甩小枪就是不冲过来，相持过程中要找他点枪的硬直冲过去打他，但是判断不准的话会被冷不丁一个重击坑惨。战斗长了之后，蝎子身上一堆毒液就成了核威慑一样的存在，一不留神撞上一个重击，就只能硬着头皮在震击出来之前能干多少血干多少了。所以有净化震击能力的钢锁，动物园组合，或者直接能净化毒液的惊天雷是首选。</p>
+<p>蝎子招牌的回血变相地增长了战斗时间。由于这个回血能力对普通攻击都触发（S技，DOT和屈防不触发），所以第一种思路是封回血，但是几个能封回血的角色里，震荡波来得慢，天火来得更慢，黄豹又是被克的……相对来说黄豹还是可以用一用，毕竟还有DOT和对重击的逃逸能力。另一种思路是靠高输出的S技（S技不触发回血），残血高觉醒大师的高输出也可以压过他的回血，这在“腐朽的堡垒”盟战里面不失为一种策略。还有一路神玩家用高觉醒的警车坚决S1控气，实在不小心充到了S2就再充到S3锁气，一格气都不给蝎子机会。</p>
 <p><strong>S1：侧，侧；S2：侧，后</strong>。S1出手极快，所以对方有一格气时千万不要压起身。S2比较好躲，但很多人闪开第一发之后就一个劲地后闪，其实不管闪到哪里，他都能在你面前从地下钻出来，所以就原地站防看准时机闪就好。</p>
 </div>
 <div id="对战ai亡灵天尊" class="section level3 hasAnchor" number="10.3.8">
@@ -386,7 +387,7 @@
 <div id="对战ai横炮" class="section level3 hasAnchor" number="10.4.3">
 <h3><span class="header-section-number">10.4.3</span> 对战AI横炮<a href="对战ai策略.html#对战ai横炮" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>横炮在被近战打到7下会出规避，看到规避后就要控制好节奏。S2结束后也有近战规避，所以闪掉了之后就先打三枪回去再说。</p>
-<p>横炮的气也来的很快<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
+<p>横炮的气也来的很快<a href="#fn20" class="footnote-ref" id="fnref20"><sup>20</sup></a>：闪避小枪会加气，招牌更是有如自带机器人资源模块。面对高觉醒的横炮，开局尽量躲远一点，让他自己加气，然后骗掉一个S1再说，否则开局就放开了打近战加对枪，很可能你都没反应过来他就给你来个S3。</p>
 <p><strong>S1：后，后，后；S2：后，后，侧或后</strong>。横炮的S1如果压在墙角，最后的踩头要看准了闪。S2和阿尔茜的S1类似，最后一下躲开射击点就行。</p>
 </div>
 <div id="对战ai警车" class="section level3 hasAnchor" number="10.4.4">
@@ -519,7 +520,7 @@
 </div>
 <div id="在哪找对练" class="section level2 hasAnchor" number="10.7">
 <h2><span class="header-section-number">10.7</span> 在哪找对练？<a href="对战ai策略.html#在哪找对练" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>要熟悉如何对战这么多AI角色，打竞技场是个不错的选择，但竞技场第一不能想碰谁就碰谁，第二自己的角色用一局就不能再用了，就怎样能实现<strong>想打谁就打谁</strong>呢？</p>
+<p>要熟悉如何对战这么多AI角色，打竞技场是个不错的选择，但竞技场第一不能想碰谁就碰谁，第二自己的角色用一局就不能再用了。大部分人要找对练都会去传奇1打搅拌者，但搅拌者毕竟只代表他自己，想练习面对特定的角色（比如练好对战汽车大师的霸体前冲，以防被秒），或者有些特别的技能想验证（比如说天火能不能招架住无法格挡的招式？）的时候，怎样能实现<strong>想打谁就打谁</strong>呢？</p>
 <p>特殊任务虽然敌人很强，但每个月都会换，只有故事模式和传奇模式的对手是一成不变的，所以最省能量的方法就是找进图第一位。于是我盘点了所有角色在故事和传奇中最早能遇到的位置，可以说大部分角色都能找到并且跑几步就能跑到，不是很耗能量。</p>
 <p>既然是练习，太弱的对手意义不大。传奇1和2都是一条线，分别取了看门的搅拌者和猩猩队长。传奇3每条线取了看门的。剩下的对手大部分位于故事模式第3和第4章，战力在几千到两万之间，所以需要<strong>把故事探索完</strong>并且<strong>挑选合适的机器人去练</strong>，你自己的主力如果碾压对方，也起不到对练的效果了。</p>
 <p>以下如无特别说明，都是进入关卡后某条分支路线上的第一位。反冲和野牛实在找不到，所幸他们都在某个关底当Boss。几个近期的新人物如飞过山、挽歌、闹翻天和G1铁皮比故事模式都要新，所以也没有，但相信他们几个肯定会在新的盟战地图中折腾大家很长时间的。</p>
@@ -553,7 +554,7 @@
 </tr>
 <tr class="odd">
 <td align="center">红蜘蛛</td>
-<td align="center">3幕3章1关</td>
+<td align="center">3幕3章1关，3幕3章1关</td>
 </tr>
 <tr class="even">
 <td align="center">大黄蜂</td>
@@ -569,7 +570,7 @@
 </tr>
 <tr class="odd">
 <td align="center">碾碎器</td>
-<td align="center">4幕2章2关，4幕3章3关</td>
+<td align="center">3幕3章5关，4幕2章2关，4幕3章3关</td>
 </tr>
 <tr class="even">
 <td align="center">猩猩队长</td>
@@ -581,11 +582,11 @@
 </tr>
 <tr class="even">
 <td align="center">斗擎</td>
-<td align="center">4幕2章1关</td>
+<td align="center">3幕1章4关，3幕2章3关，4幕2章1关</td>
 </tr>
 <tr class="odd">
 <td align="center">汽车大师</td>
-<td align="center">4幕1章2关，4幕4章5关</td>
+<td align="center">3幕3章3关，4幕1章2关，4幕4章5关</td>
 </tr>
 <tr class="even">
 <td align="center">野牛</td>
@@ -609,15 +610,15 @@
 </tr>
 <tr class="odd">
 <td align="center">碎骨魔</td>
-<td align="center">传奇3侦查门，4幕2章3关，4幕3章3关</td>
+<td align="center">传奇3侦查门，3幕2章4关，4幕2章3关，4幕3章3关</td>
 </tr>
 <tr class="even">
 <td align="center">漂移</td>
-<td align="center">4幕4章4关</td>
+<td align="center">3幕4章5关，3幕4章6关，4幕4章4关</td>
 </tr>
 <tr class="odd">
 <td align="center">阿尔茜</td>
-<td align="center">4幕4章3关</td>
+<td align="center">3幕1章2关，3幕1章3关，3幕2章2关，4幕4章3关</td>
 </tr>
 <tr class="even">
 <td align="center">热破</td>
@@ -637,11 +638,11 @@
 </tr>
 <tr class="even">
 <td align="center">风刃</td>
-<td align="center">3幕2章1关，3幕2章5关</td>
+<td align="center">3幕1章4关，3幕2章1关，3幕2章5关，3幕2章5关</td>
 </tr>
 <tr class="odd">
 <td align="center">路障</td>
-<td align="center">4幕1章4关</td>
+<td align="center">3幕1章1关，4幕1章4关</td>
 </tr>
 <tr class="even">
 <td align="center">小黄蜂</td>
@@ -657,7 +658,7 @@
 </tr>
 <tr class="odd">
 <td align="center">警车</td>
-<td align="center">传奇3科技门，3幕3章2关，3幕4章4关</td>
+<td align="center">传奇3科技门，3幕1章6关，3幕3章2关，3幕3章2关，3幕4章4关，3幕4章4关</td>
 </tr>
 <tr class="even">
 <td align="center">爵士</td>
@@ -669,7 +670,7 @@
 </tr>
 <tr class="even">
 <td align="center">声波</td>
-<td align="center">4幕1章1关，4幕3章1关，4幕3章4关</td>
+<td align="center">3幕3章4关，4幕1章1关，4幕3章1关，4幕3章4关</td>
 </tr>
 <tr class="odd">
 <td align="center">震荡波</td>
@@ -677,11 +678,11 @@
 </tr>
 <tr class="even">
 <td align="center">犀牛</td>
-<td align="center">3幕2章4关，3幕4章3关</td>
+<td align="center">3幕2章4关，3幕2章4关，3幕4章3关，3幕4章3关</td>
 </tr>
 <tr class="odd">
 <td align="center">救护车</td>
-<td align="center">4幕1章3关，3幕1章3关</td>
+<td align="center">3幕1章3关，3幕1章3关，3幕1章5关，4幕1章3关</td>
 </tr>
 <tr class="even">
 <td align="center">幻影</td>
@@ -725,7 +726,7 @@
 </tr>
 <tr class="even">
 <td align="center">搅拌者</td>
-<td align="center">传奇1进门，4幕1章4关</td>
+<td align="center">传奇1进门，3幕4章2关，4幕1章4关</td>
 </tr>
 <tr class="odd">
 <td align="center">震天尊</td>
@@ -737,27 +738,27 @@
 </tr>
 <tr class="odd">
 <td align="center">战术鲨鱼</td>
-<td align="center">4幕2章4关，4幕3章4关，4幕3章5关，3幕2章6关</td>
+<td align="center">3幕1章3关，3幕1章6关，3幕2章6关，3幕4章1关，3幕4章3关，4幕2章4关，4幕3章4关，4幕3章5关</td>
 </tr>
 <tr class="even">
 <td align="center">斗士鲨鱼</td>
-<td align="center">4幕4章5关，3幕2章6关</td>
+<td align="center">3幕1章2关，3幕1章5关，3幕2章1关，3幕2章5关，3幕2章6关，3幕3章1关，4幕4章5关</td>
 </tr>
 <tr class="odd">
 <td align="center">战士鲨鱼</td>
-<td align="center">4幕1章4关，4幕2章2关，4幕2章4关，4幕2章5关，4幕3章3关，4幕4章3关，3幕2章6关</td>
+<td align="center">3幕1章1关，3幕1章4关，3幕2章6关，4幕1章4关，4幕2章2关，4幕2章4关，4幕2章5关，4幕3章3关，4幕4章3关</td>
 </tr>
 <tr class="even">
 <td align="center">侦查鲨鱼</td>
-<td align="center">4幕1章5关，4幕2章3关，4幕4章5关，3幕2章6关</td>
+<td align="center">3幕2章2关，3幕2章6关，3幕3章2关，3幕3章3关，3幕3章5关，3幕3章6关，3幕4章1关，4幕1章5关，4幕2章3关，4幕4章5关</td>
 </tr>
 <tr class="odd">
 <td align="center">科技鲨鱼</td>
-<td align="center">4幕1章5关，3幕2章6关</td>
+<td align="center">3幕2章3关，3幕2章6关，3幕3章6关，3幕4章2关，3幕4章5关，3幕4章6关，4幕1章5关</td>
 </tr>
 <tr class="even">
 <td align="center">爆破鲨鱼</td>
-<td align="center">4幕2章5关，4幕4章1关，3幕2章6关</td>
+<td align="center">3幕1章3关，3幕2章6关，3幕3章4关，3幕3章5关，3幕4章4关，4幕2章5关，4幕4章1关</td>
 </tr>
 <tr class="odd">
 <td align="center">S1000</td>
@@ -789,10 +790,14 @@
 
 
 
+
+
+
+
 <div class="footnotes">
 <hr />
-<ol start="16">
-<li id="fn16"><p>是非常快<a href="对战ai策略.html#fnref16" class="footnote-back">↩︎</a></p></li>
+<ol start="20">
+<li id="fn20"><p>是非常快<a href="对战ai策略.html#fnref20" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
