--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
@@ -304,13 +305,13 @@
 <li>阿尔茜面对<strong>各类</strong>远程攻击拥有天生的规避能力（六阶有23%的概率)，甚至不管她是在变车撞向对手，还是被特殊技打击，只要是远程攻击，她都可能脱身。通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。当然，如果规避能力被抑制的时候（如黄豹的招牌，热破的减速和探长的精准弹药），阿尔茜是规避不了的。这项能力有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候电脑的阿尔茜给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
 <li>大部分角色是S2比较强，阿尔茜则拥有这个游戏中为数不多的优秀S1：一方面她S1中有三发小枪，比起点枪对射中可怜的命中率，这三发小枪连上S1可是妥妥地必中，自然提高了出爆头的概率。而S1之后的小枪不但增伤，还提升射速，阿尔茜“嗖嗖”的小枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了命中率。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂上流血。</li>
 <li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，虽然出暴击时100%能流血，但是流血的伤害只有69.3%（六阶），而S1的三发子弹只要爆头一发就已经120%的伤害了。所以……偶尔需要用物理攻击的时候（比如对方是幻影，或者有能量抗性模块）可以考虑。</li>
-<li>由于S1优秀S2鸡肋<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的兜底，因为S3前面就有几发小枪可以打爆发，最后的狙击枪100%能施加流血<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>。</li>
+<li>由于S1优秀S2鸡肋<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的兜底，因为S3前面就有几发小枪可以打爆发，最后的狙击枪100%能施加流血<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。</li>
 </ul>
 <p>虽然阿尔茜是近战型的重击，近战连击也是7连击，但她并不是一个近战型的选手，她所有的近战就是为了给自己加气到S1，再用小枪杀人！</p>
 </div>
 <div id="招牌-17" class="section level4 hasAnchor" number="5.3.1.2">
 <h4><span class="header-section-number">5.3.1.2</span> 招牌<a href="战士系.html#招牌-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>概率获得精准增益，加25%暴击率，阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，还是很有效的。</p>
+<p><strong>守卫者的残暴</strong>：在使用任何S技时，有45~80%的概率获得精准增益，加25%暴击率并阻止规避10秒。虽然是个看脸的招牌，但由于是100%治疗规避，所以阿尔茜在一个S1击倒路障后如果出了招牌，对方是无能为力的。而且初始概率就有45%左右，不是很吃招牌就能达到比较好的效果。</p>
 <p>2021年9月9日对这个招牌做了加强：</p>
 <ul>
 <li>S1和S2动画结束后才开始倒计时</li>
@@ -322,8 +323,8 @@
 <p>阿尔茜的协同很一般，女性角色不应该有很多“羁绊”吗？可能也是为了限制她变得过强吧。</p>
 <ul>
 <li>神射手（双向，幻影和探长）：最高加20%远程攻击的暴击率。</li>
-<li>盟友（大黄蜂，录音机）：加护甲。</li>
-<li>敌人（</li>
+<li>盟友（小黄蜂，录音机）：加护甲。</li>
+<li>敌人（野牛，雷震）：加攻。</li>
 <li>与通天晓一同出战时，队中汽车人加攻，突袭中额外加伤害减益。</li>
 </ul>
 </div>
@@ -373,7 +374,7 @@
 </div>
 <div id="招牌-18" class="section level4 hasAnchor" number="5.4.1.2">
 <h4><span class="header-section-number">5.4.1.2</span> 招牌<a href="战士系.html#招牌-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>。</p>
+<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间<a href="#fn10" class="footnote-ref" id="fnref10"><sup>10</sup></a>。</p>
 </div>
 <div id="协同-18" class="section level4 hasAnchor" number="5.4.1.3">
 <h4><span class="header-section-number">5.4.1.3</span> 协同<a href="战士系.html#协同-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -550,7 +551,7 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：一格气后获得一层毒液（经测试，最多堆10层）。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，要么不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>简直是太爽。</li>
+<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
@@ -580,7 +581,7 @@
 <p>长战斗时选择毒液给自己。</p>
 <p>打法一适合有防震击手段的敌人（觉醒猩猩，反冲等）或者血厚但没护甲、抗性的敌人。战术是只用S1，不放重击，一路把毒液堆到10层，用200%的攻击加成打架，输出是有保障的。</p>
 <p>打法二适用于比较难啃的硬骨头，他们因为有护甲、抗性或者护盾，需要施加一定DOT或者逆火伤害来保证输出。初期还是坚决不放重击也不放S1，直接等到第一个S3集满，毒液达到3层。</p>
-<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>。</p>
+<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>。</p>
 </div>
 </div>
 <div id="基地防守-22" class="section level3 hasAnchor" number="5.7.3">
@@ -609,7 +610,7 @@
 <li><strong>势不可挡的力量</strong>
 <ul>
 <li>充能达到20层时进入势不可挡的力量状态，此时获得进一步加攻，但是格挡熟练度和近战防御力下降。这有点对标震天尊的狂怒和保存遗迹之间的攻守切换。</li>
-<li>此状态下击中敌人将100%造成一层6秒的流血，不可叠加，但小枪和近战都可刷新，基本上可以保持流血不停。值得搭配深度创伤精通。</li>
+<li>此状态下击中敌人将100%造成一层6秒的流血，不可叠加，但小枪和近战都可刷新，基本上可以保持流血不停。<strong>这个刷新的特性和深度创伤精通有神奇的化学反应：因为只要你当前血量比对手多，每一次击中敌人都会触发一次尝试创伤的额外扣血</strong>（其实还是比较明显的，就是当你在势不可挡状态下放S1，对方身上红字乱跳，就证明现在你的血比对方多了）！</li>
 <li>此状态下，敌人如果发动S技，亡灵天尊有30%的概率会出霸体0.95秒。这个技能自己用的话，可以比较任性地前冲压起身，保手残党平安。但是更多的时候，会让电脑的亡灵天尊逃过你的大招（比如盟战Boss）</li>
 </ul></li>
 </ul></li>
@@ -641,7 +642,7 @@
 <h4><span class="header-section-number">5.8.1.4</span> 短板<a href="战士系.html#短板-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><em>其实亡灵天尊还是有独特玩法和实力的。以下与其说是短板，不如说是因为比预期实力要弱形成的吐槽。</em></p>
 <p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与<a href="爆破系.html#震天尊">震天尊</a>比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！然而先不说他没有震天尊的自动加气和10秒不死金身，他的类别就已然让他矮了一截：他被安排进了游戏中整体最弱的战士系……技能看起来比较复杂，但进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！（据说后续经过调整后似乎没有这个问题了，具体没太注意）</p>
-<p>三个S技并无什么特别功能，在觉醒前，发动S技的时候可能会把亡灵天尊从势不可挡的力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
+<p>在觉醒前，发动S技的时候可能会把亡灵天尊从势不可挡的力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
 </div>
 </div>
 <div id="推荐打法-23" class="section level3 hasAnchor" number="5.8.2">
@@ -650,12 +651,12 @@
 <div id="短战斗-21" class="section level4 hasAnchor" number="5.8.2.1">
 <h4><span class="header-section-number">5.8.2.1</span> 短战斗<a href="战士系.html#短战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于进入势不可挡的力量会让他攻强守弱，连格挡伤害都更高，亡灵天尊在使用时要保护好自己，但由于输出很高，结束战斗也快。</p>
-<p>短战斗优先选择S2，因为攒满两格能量本身已经有10个充能，再加上中间使用的连击，轻轻松松20层以上，这时一个S2下去已经伤害很可观了。</p>
+<p>短战斗优先选择S2，因为攒满两格能量本身已经有10个充能，再加上中间使用的连击，轻轻松松20层以上，这时一个S2下去已经伤害很可观了。当然S1也不是不可以，因为短战斗意味着我方基础血量和对方差不了多少，很可能打一会儿血量就超过了对手，用S1可以快速触发深度创作的额外扣血，只是要注意放S1的时候一定要是在势不可挡的力量状态放，否则不会刷新流血。</p>
 </div>
 </div>
 <div id="长战斗-21" class="section level3 hasAnchor" number="5.8.3">
 <h3><span class="header-section-number">5.8.3</span> 长战斗<a href="战士系.html#长战斗-21" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>长战斗可以用好能量控制的能力，频繁使用S1放空自己控制对方能量</p>
+<p>长战斗可以用好能量控制的能力，频繁使用S1放空自己，控制对方能量。长战斗刚开始的时候，亡灵的血量肯定少于对方，所以不用特别考虑是否在势不可当状态下放S1。要等慢慢压过对手的血量后，才关注S1是否连续7次触发深度创伤的额外扣血。</p>
 <p>推荐按漂移这种标准的堆连击、少用重击的打法，短战斗围绕S1快速获得能量（频繁放空气槽，也能利用到动态控气的能力）。长战斗可以用S2加一些伤害。S3纯鸡肋，不需要使用。</p>
 </div>
 <div id="基地防守-23" class="section level3 hasAnchor" number="5.8.4">
@@ -728,12 +729,12 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="5">
-<li id="fn5"><p>回想起来，这样的设计可能符合1.0版中阿尔茜只能在出暴击的时候才能得到能量的设定：因为能量来得少，所以S1要更优秀一些。<a href="战士系.html#fnref5" class="footnote-back">↩︎</a></p></li>
-<li id="fn6"><p>曾经S3在猩猩黄甲时上打不出流血，后来修正正常了。<a href="战士系.html#fnref6" class="footnote-back">↩︎</a></p></li>
-<li id="fn7"><p>游戏中并没有提到“延长时间”具体指什么，是指单纯地延长DOT的持续时间（总伤害不变），还是保持原有的伤害速率的前提下延长时间（总伤害增加）？我倾向于认为是后者，因为前者似乎意义不大<a href="战士系.html#fnref7" class="footnote-back">↩︎</a></p></li>
-<li id="fn8"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref8" class="footnote-back">↩︎</a></p></li>
-<li id="fn9"><p>只怕惊天雷<a href="战士系.html#fnref9" class="footnote-back">↩︎</a></p></li>
+<ol start="8">
+<li id="fn8"><p>回想起来，这样的设计可能符合1.0版中阿尔茜只能在出暴击的时候才能得到能量的设定：因为能量来得少，所以S1要更优秀一些。<a href="战士系.html#fnref8" class="footnote-back">↩︎</a></p></li>
+<li id="fn9"><p>曾经S3在猩猩黄甲时上打不出流血，后来修正正常了。<a href="战士系.html#fnref9" class="footnote-back">↩︎</a></p></li>
+<li id="fn10"><p>游戏中并没有提到“延长时间”具体指什么，是指单纯地延长DOT的持续时间（总伤害不变），还是保持原有的伤害速率的前提下延长时间（总伤害增加）？我倾向于认为是后者，因为前者似乎意义不大<a href="战士系.html#fnref10" class="footnote-back">↩︎</a></p></li>
+<li id="fn11"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref11" class="footnote-back">↩︎</a></p></li>
+<li id="fn12"><p>只怕惊天雷<a href="战士系.html#fnref12" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
