--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
@@ -272,36 +273,41 @@
 <ul>
 <li>自适应型的规避，可以在受到攻击时有针对性地脱身。
 <ul>
-<li>所谓自适应，指的是他会在两种规避（近战、远程）之间切换，并且任何时间一定有一种规避能力在身：开场是近战规避，受到远程攻击后切换为远程规避，再受到近战攻击时又切换为近战，切换有一定的延时，可以通过觉醒能力来缩短。这就让大黄蜂有了很好的逃生能力：想要有效在大黄蜂上打输出，首先开场要用小枪（或者远程重击）命中他，让他切换成远程规避，才能放心地打近战连击，然而在打中第一下近战的时候，他又开始切换回近战规避了。所以如果要在近战后连S技的话，可能无法打满5下。在实际对战电脑高觉醒大黄蜂的时候，要时刻盯着他的规避类型，有机会也不能太贪。有镇静精通的话会放心一些。</li>
+<li>所谓自适应，指的是他会在两种规避（近战、远程）之间切换，并且任何时间一定有一种规避能力在身（被驱散了也会回来）：开场是近战规避（13.3~25.5%） ，受到远程攻击后切换为远程规避（11.3~21.6%），再受到近战攻击时又切换为近战，切换有一定的延时，可以通过提升招牌等级来缩短。这就让大黄蜂有了很好的逃生能力：想要有效在大黄蜂上打输出，首先开场要用小枪（或者远程重击）命中他，让他切换成远程规避，才能放心地打近战连击，然而在打中第一下近战的时候，他又开始切换回近战规避了。所以如果要在近战后连S技的话，可能无法打满5下。在实际对战电脑高觉醒大黄蜂的时候，要时刻盯着他的规避类型，有机会也不能太贪。有镇静精通的话会放心一些。</li>
 <li>在自己使用大黄蜂的时候，由于作为玩家并不知道他什么时候会触发规避，只能说规避了是惊喜。并且平时挨打5下等着打回头的习惯不好用了——说不定对方还没打到几下大黄蜂就自己脱身了，这时要尽快反击。</li>
 </ul></li>
-<li>每击倒敌人一次堆积一层永久加攻，最大20层（原为15层，后暗改）。</li>
-<li>S1<del>没有额外效果</del>在8.0中变成每一击有概率施加一层破甲，适用于堆加攻。S2和S3配有震击，对护甲越高的敌人震击强度越高。S2比S3的效果更好。</li>
+<li>每击倒敌人一次堆积一层永久加攻，上限原为15层，后暗改为20层，第21层开始会有倒计时。</li>
+<li>S1：最初没有额外效果，在8.0中改成每一击有概率施加一层破甲</li>
+<li>S2和S3配有震击，对护甲越高的敌人震击强度越高。S2比S3的效果更好。</li>
 <li>每个死亡的队友让大黄蜂加攻，所以在推图中，上得越晚越好。</li>
 </ul>
 </div>
 <div id="招牌-1" class="section level4 hasAnchor" number="3.2.1.2">
 <h4><span class="header-section-number">3.2.1.2</span> 招牌<a href="战术系.html#招牌-1" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>招牌能力缩短两种规避的切换时间，方便受到连招时迅速脱身。同时在闪避近战时临时加攻。</p>
+<p>招牌能力缩短两种规避的切换时间，方便受到连招时迅速脱身。同时在闪避近战时临时获得加攻。由于5星大黄蜂的获得方式比较少，所以招牌一般要吃觉醒程序才能堆高，但大黄蜂在战术系中的地位并不算高，招牌里也主要是加攻的部分是对玩家带来直接收益的，所以除非确定了就拿他做主力，否则不用堆太高。</p>
 </div>
 <div id="协同-1" class="section level4 hasAnchor" number="3.2.1.3">
 <h4><span class="header-section-number">3.2.1.3</span> 协同<a href="战术系.html#协同-1" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>搭配救护车可以在战斗开始时获得回血。</li>
-<li>搭配幻影可以用S2或S3减少对方能力触发的概率，但不知是否能对抗100%触发的能力。</li>
+<li>盟友（爆破铁皮，斗擎，热破）：加护甲</li>
+<li>敌人（双向：路障，爆威）：加攻</li>
+<li>医疗支持（救护车）：可以在战斗开始时获得回血，突袭中有额外回血。</li>
+<li>间谍专家（双向：幻影）：可以用S2或S3减少对方能力触发的概率。</li>
+<li>极速追逐（横炮，幻影）：闪避对手攻击后为下一击加攻。</li>
 </ul>
 </div>
 <div id="短板-1" class="section level4 hasAnchor" number="3.2.1.4">
 <h4><span class="header-section-number">3.2.1.4</span> 短板<a href="战术系.html#短板-1" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>作为战术系，对付斗士们的护甲没有什么好办法，是大黄蜂最大的短板，后来官方在8.0中将S1调整为每一击都可以破甲，这让大黄蜂终于能对付斗士了。</p>
+<p>作为战术系，对付斗士们的护甲没有什么好办法，曾经是大黄蜂最大的短板，后来官方在8.0中将S1调整为每一击都可以破甲，这让大黄蜂终于能对付斗士了。</p>
 <p>他整体的设计更像一个侦查（也符合大黄蜂侦察兵的身份），在平时要注意出规避的时候要迅速反击，不要因为出规避反而打乱自己的部署。</p>
+<p>他的第一下M攻击（双拳）有时会打空，尤其是对方前冲吃到你两发子弹时。</p>
 </div>
 </div>
 <div id="推荐打法-1" class="section level3 hasAnchor" number="3.2.2">
 <h3><span class="header-section-number">3.2.2</span> 推荐打法<a href="战术系.html#推荐打法-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗-1" class="section level4 hasAnchor" number="3.2.2.1">
 <h4><span class="header-section-number">3.2.2.1</span> 短战斗<a href="战术系.html#短战斗-1" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>近战缠斗，多用重击，围绕S1或S2进行输出。他的近战连击是7连，所以防御磨血也更可观一些。打中五连后如果没有S技，可以马上抢先手进攻，对方一般会屈防，这时打5下后重击。</p>
+<p>近战缠斗，多用重击，围绕S1进行输出。他的近战连击是7连，所以防御磨血也更可观一些。打中五连后如果没有S技，可以马上抢先手进攻，对方一般会屈防，这时打5下后重击。</p>
 </div>
 <div id="长战斗-1" class="section level4 hasAnchor" number="3.2.2.2">
 <h4><span class="header-section-number">3.2.2.2</span> 长战斗<a href="战术系.html#长战斗-1" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -310,7 +316,7 @@
 </div>
 <div id="基地防守-1" class="section level3 hasAnchor" number="3.2.3">
 <h3><span class="header-section-number">3.2.3</span> 基地防守<a href="战术系.html#基地防守-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>战术黄的规避能力不俗，战斗时间会更长，配流血模块面对不带净化的对手可以白送不少输出。另外他的S2很难躲（后闪-侧闪-后闪-侧闪），配超导2000也是不错的选择。配EMI模块可以让对方很难有效地切换他的规避类型。</p>
+<p>战术黄的规避能力不俗，战斗时间会更长，配流血模块面对不带净化的对手可以白送不少输出。另外他的S2很难躲，配超导2000也是不错的选择。配EMI模块可以让对方很难有效地切换他的规避类型。</p>
 <!--/Note-->
 </div>
 </div>
@@ -321,61 +327,64 @@
 <!--Note-->
 <div id="特点分析-2" class="section level3 hasAnchor" number="3.3.1">
 <h3><span class="header-section-number">3.3.1</span> 特点分析<a href="战术系.html#特点分析-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>通天晓曾经是苹果用户的专属机器人，但除了角色本身的人气外，在游戏中像他在动画中一样是个扶不起的阿斗，<del>虽然官方调整过他那晦涩难懂的招牌，依然泯然众人间。</del>经过多次调整，终于达到了能用的水平。AI使用的通天晓以其神秘的走位，难猜的S1被人戏称为“亚洲舞王”，属于相当耐揍的坦克型对手。</p>
+<p>通天晓曾经是苹果用户的专属机器人，但除了角色本身的人气外，在游戏中的他像在动画中一样是个扶不起的阿斗。<del>虽然官方调整过他那晦涩难懂的招牌，依然泯然众人间。</del>经过多次调整，终于达到了能用的水平。AI使用的通天晓以其神秘的走位，难猜的S1被人戏称为“亚洲舞王”，属于相当耐揍的坦克型对手。</p>
 <div id="能力-2" class="section level4 hasAnchor" number="3.3.1.1">
 <h4><span class="header-section-number">3.3.1.1</span> 能力<a href="战术系.html#能力-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p><em>通天晓经过几次平衡性调整，以下合并在一起介绍</em></p>
 <ul>
-<li>自适应的抗性切换，在受到不同攻击时能逐渐降低伤害。换句话说，对付AI通天晓时，需要交替使用物理和能量攻击才能保证输出，例如警车可以先揍出10层物理抗性，再用S2两发打出高伤害。但像漂移，雷震和反冲这几位遇到他就实在苦手了，因为他们的普通远程攻击算物理攻击，无法使通天晓的抗性切换。</li>
-<li><del>特殊技的破甲条件是对方也有护甲，</del>S1在对方没有护甲的情况下强制破甲，如果有护甲，则几层护甲就转化成几层破甲。猩猩队长这种让很多角色很头疼的护甲能力，在通天晓面前是不堪一击的。</li>
-<li>S2在两种抗性累计到10层的时候能获得较大的提升。</li>
-<li>另外小枪有驱散加攻类buff的能力，但不像红蜘蛛和犀牛有附加伤害。</li>
+<li><strong>抗性切换</strong>：
+<ul>
+<li>受到一次物理攻击就加一层物理抗性，减一层能量（没有则不减），受到能量攻击则反过来。这种<strong>自适应的抗性切换</strong>让通天晓坦度很高。</li>
+<li>因为两种抗性是此消彼长的关系，最大总和为10。玩家如果不希望被打，可以通过防御来堆高抗性，也可以通过主动进攻：轻攻击结束连击，加物理减能量抗性，中攻击则加能量减物理抗性。</li>
+</ul></li>
+<li>远程小枪必然驱散攻击buff或者近战buff，虽不像红蜘蛛和犀牛有附加伤害，但面对汽车大师的招牌也是有很好的控制力。</li>
+<li>重击有65%的概率施加燃烧，燃烧的强度不俗（6秒80%攻击，强过钢锁和铁皮的重击），S2的导弹也有概率燃烧。燃烧可叠加。</li>
+<li>S技是锤子和导弹的表演：
+<ul>
+<li>三个S技中的锤子攻击都可以把对方身上护甲层数等量转化为破甲层数，持续10秒。猩猩队长这种让很多角色很头疼的护甲能力，在通天晓面前是不堪一击的。</li>
+<li>S2和S3的导弹都有65%的概率施加燃烧。</li>
+<li>S1是一锤，在对方没有护甲的情况下也能强制施加一层破甲，持续10秒。</li>
+<li>S2是一锤一炮：75%的护甲穿透，每层物理抗性加5%的近战伤害，每层能量抗性加5%的远程伤害，所以只要两种抗性累计到10层的时候，用S2横竖都是赚。</li>
+<li>S3是一锤多炮送上天。没有任何独特之处的S3。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-2" class="section level4 hasAnchor" number="3.3.1.2">
 <h4><span class="header-section-number">3.3.1.2</span> 招牌<a href="战术系.html#招牌-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>招牌能力根据存活和死亡的队友数目调整自己的基础数值，比较适合5人推图。</p>
+<p><strong>人人为我</strong>：存活的队友比死亡的多或者通天晓单人出战时得到20%的物理抗性，死亡的队友比存活的多或数量相等，则获得23~96%的攻击buff。如果所有的队友都死亡，则两种加成均获得。这是很少见的与战场之外相关的招牌，所以也没有太大的价值。</p>
 </div>
 <div id="协同-2" class="section level4 hasAnchor" number="3.3.1.3">
 <h4><span class="header-section-number">3.3.1.3</span> 协同<a href="战术系.html#协同-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>阿尔茜和警车搭配通天晓，为所有汽车人提升攻击和护甲。</p>
+<p>盟友（双向：录音机，钢锁）：加护甲
+盟友（警车）：加护甲
+敌人（双向：惊破天，狂飙）：加攻</p>
 </div>
 <div id="短板-2" class="section level4 hasAnchor" number="3.3.1.4">
 <h4><span class="header-section-number">3.3.1.4</span> 短板<a href="战术系.html#短板-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在进攻方面，他的输出实在是对不起他这么大的个子。这一点比另一个同样是很肉的蛮汉角色碾碎器要差了很多。</p>
-<p><del>由于很大一部分能力在防御侧，玩家要加以利用，最稳妥的是吃防御伤害堆抗性，但要让抗性一路堆到10层物理或10层能量，打电脑的时候看着容易，玩家用还真不简单，因为运气最好也要防御10下，而且电脑会交替使用两类攻击，运气差的话一场比赛都堆不满。</del></p>
-<p>官方在2周年纪念前夕放出一张海报，致敬变形金刚86大电影，站在C位的通天晓雄风无限，大家以为他就要崛起了。让人大跌眼镜的是，最后他居然没有进入官方的8.0调整名单…直到2019年11月，通天晓才得到了真正意义上的加强，虽然暂时还无法撼动战威战擎的领导地位，但是在和其他几个战术系的竞争中已经明显高出一个身位。</p>
-</div>
-<div id="年10月31日调整" class="section level4 hasAnchor" number="3.3.1.5">
-<h4><span class="header-section-number">3.3.1.5</span> 2019年10月31日调整<a href="战术系.html#年10月31日调整" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<ul>
-<li>重击有55%的概率施加燃烧，燃烧的强度不俗（6秒80%攻击，强过钢锁和铁皮的重击），S2的导弹也有概率燃烧。燃烧可叠加。</li>
-<li>S1打击没有护甲的敌人也可以施加一层护甲，有护甲敌人依然是有几层就破几层。</li>
-<li>轻攻击结束连击加一层物理抗性，丢失一层能量抗性，中攻击则相反。重要的是，如果另一种抗性为零也会增加，所以可以通过连击来主动积攒抗性。</li>
-<li>招牌的数值提升不少，让通天晓的战力值大大上升。</li>
-</ul>
+<p>通天晓调整之前比较差劲，调整后依然还是没在战术系冒尖<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>，普通拳脚的输出实在是对不起他这么大的个子。要打出可观的输出，需要堆10层抗性，比较费脑。</p>
 </div>
 </div>
 <div id="推荐打法-2" class="section level3 hasAnchor" number="3.3.2">
 <h3><span class="header-section-number">3.3.2</span> 推荐打法<a href="战术系.html#推荐打法-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗-2" class="section level4 hasAnchor" number="3.3.2.1">
 <h4><span class="header-section-number">3.3.2.1</span> 短战斗<a href="战术系.html#短战斗-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>通天晓的重击<del>虽然没有什么附加</del>调整之后，燃烧概率和效果均为上乘，且行动速度较快，可使用放风筝打法牵制，再围绕S1的破甲来结束战斗。</p>
+<p>通天晓的重击调整之后，燃烧概率和效果均为上乘，且行动速度较快，可使用放风筝打法牵制，再围绕S1的破甲来结束战斗。</p>
 </div>
 <div id="长战斗-2" class="section level4 hasAnchor" number="3.3.2.2">
 <h4><span class="header-section-number">3.3.2.2</span> 长战斗<a href="战术系.html#长战斗-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><del>开始战斗后找机会靠主动防御来堆抗性，堆10层物理抗性比较稳，例如五连击成功不逃跑，而是站防让对方打几下。10层能量抗性很难——你远距离站防，电脑是不会狂开枪的。</del>
-首要任务是堆到10层抗性，因为通天晓在不被驱散和偷走的情况下，抗性总和最大为10，有了10层后对伤害的控制达到最优，S2也得到很大加强。但由于抗性在被打时容易切换，所以一定要有明确的目标：</p>
+<p>因为有了10层抗性后对伤害的控制达到最优，S2也得到很大加强，所以首要任务是<strong>一路</strong>堆到10层物理或10层能量抗性。但由于抗性在被打时容易切换，电脑又不会那么“配合”，所以堆满10层的过程会比较曲折，<strong>一定要有明确的目标</strong>：</p>
 <ul>
-<li>堆物理：坚持轻攻击结束连击，并且适当地进行一些近战防御（例如五连后马上原地防御）。这适用于对付那些近战很疼的对手。</li>
-<li>堆能量：坚持中等攻击结束连击并适当防御一些远程小枪，这种方式更符合玩家的操作习惯（因为大部分玩家都是采用MLLLM和LLLMM来做五连的），防小枪伤害也更低。</li>
+<li>堆物理：坚持轻攻击结束连击，并且适当地进行一些近战防御（例如五连后马上原地防御）。这适用于对付那些近战型对手和近战伤害比较大的对手如斗擎，汽车大师。</li>
+<li>堆能量：坚持中等攻击结束连击并适当防御一些远程小枪，这种方式适合面对远程点枪很多的敌人如幻影、惊破天或者远程特殊技伤害比较大或者难躲的对手如警车。</li>
 </ul>
-<p>堆高或堆满抗性就可以围绕S2打输出了。<del>注意面对有护甲的对手，要等护甲出来再放特殊技比较划算，尤其是猩猩。</del>S2是一锤一炮，相对来说后面的一炮伤害大，所以10层能量抗性放S2是最划算的。不过虽然S2很爽，但带着10层能量抗性吃一套残血大师的5连依然是很疼。所以在实战中还是要根据对手的情况来调整。</p>
-<p>面对汽车大师这样的角色，注意用小枪点掉他的攻击加成，防止瞬间血崩式的翻盘。</p>
+<p>实际战斗中堆物理是比较稳的，因为电脑吃五连后近战打回头的概率比较大。而要在远程相持中主动防御小枪，电脑反而就不配合了（玩震荡波的同学一定有同感）。</p>
+<p>堆高或堆满抗性就可以回到远程放风筝牵制加S2输出的打法，跟爆破铁皮很像，不过有机会侧闪反击时也不要拒绝。面对汽车大师这样的角色，注意用小枪点掉他的攻击加成，防止瞬间血崩式的翻盘。</p>
+<p>堆满抗性之后也可以根据其实需要，通过近战连击最后一下把抗性调整到5+5这种比较平衡的状态。</p>
 </div>
 </div>
 <div id="基地防守-2" class="section level3 hasAnchor" number="3.3.3">
 <h3><span class="header-section-number">3.3.3</span> 基地防守<a href="战术系.html#基地防守-2" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p><del>由于错过8.0的抢救名单，</del>亚洲舞王很适合基地防守：EMI、过滤器、流血、领袖模块……就算守不住，也能恶心到人。</p>
+<p>亚洲舞王很适合基地防守：EMI、过滤器、流血、领袖模块……就算守不住，也能恶心到人。</p>
 <!--/Note-->
 </div>
 </div>
@@ -690,6 +699,7 @@
 <ol start="1">
 <li id="fn1"><p>游戏中的翻译为“出击时”显然让人摸不着头脑，其实是因为经典的梗——擎天柱的标志口号就是“Transform and Roll Out!”（汽车人，变形出发！）<a href="战术系.html#fnref1" class="footnote-back">↩︎</a></p></li>
 <li id="fn2"><p>其实5星的也可以上去送死，只是有些人5星救护车也升到可以独当一面的水平了，救护车本来就可以打长战斗，否则全程就战擎一个人<a href="战术系.html#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p>官方在2周年纪念前夕放出一张海报，致敬变形金刚86大电影，站在C位的通天晓雄风无限，大家以为他就要崛起了。让人大跌眼镜的是，最后他居然没有进入官方的8.0调整名单…直到2019年11月，通天晓才得到了真正意义上的加强。<a href="战术系.html#fnref3" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
