--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
@@ -200,38 +201,49 @@
 <!--Note-->
 <div id="特点分析-8" class="section level3 hasAnchor" number="4.1.1">
 <h3><span class="header-section-number">4.1.1</span> 特点分析<a href="斗士系.html#特点分析-8" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>斗士擎天柱（斗擎）作为开服即发布的机器人，早期几乎用来克制碎骨魔和未削弱版伤害加速器的唯一手段，成为了无数玩家追捧的对象，官方甚至专门将他四星版本标价出售。他简单粗暴的打法，残血翻盘的单兵能力，优秀的协同，既很好地诠了电影作品中那个霸气领袖，也令他一直在斗士系位置稳定。</p>
+<p>斗士擎天柱（斗擎）作为开服即发布的机器人，早期几乎是用来克制碎骨魔和未削弱版伤害加速器的唯一手段，也成为了无数玩家追捧的对象，官方甚至专门将他四星版本标价出售。他简单粗暴的打法，残血翻盘的单兵能力，优秀的协同，既很好地诠了电影作品中那个霸气领袖，但是在游戏发展到后期，斗擎在斗士系中已经很难超越技能全面的其他竞争对手。</p>
 <div id="能力-8" class="section level4 hasAnchor" number="4.1.1.1">
 <h4><span class="header-section-number">4.1.1.1</span> 能力<a href="斗士系.html#能力-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>主动攻击时可以获得攻击加成，主动防御可以获得防御加成，自身遭受流血的时候可以把输出变成回血，超过一层的流血马上净化掉换成能量。</li>
-<li>S1是为数不多的只打一下的特殊技，但这一下血越少杀伤越大，风刃30多下的S3也难望其项背；S2除了杀伤力巨大，流血概率也更高；S3基本上就是弱化的S2，平时很少使用。</li>
+<li>主动格挡时得到一个护甲7秒</li>
+<li>所有攻击都有10%的概率得到一层攻击加成4秒</li>
+<li>自身遭受流血的时候可以把输出伤害的最多31.5%变成自己的血，超过一层的流血马上会净化掉换成10%的能量。这让斗擎在打碎骨的时候丝毫不担心吃反伤。</li>
+<li>S技中所有出刀的动作都有60%的概率施加3秒40%的流血
+<ul>
+<li>S1是为数不多的只打一下的特殊技，但正因为所有的伤害都集中在这一下，并且血越少杀伤越大（最高加150%的伤害），所以在残血时这是斗擎最主要的输出手段，无论有没有激活招牌。</li>
+<li>S2除了杀伤力巨大，额外加30%的流血概率</li>
+<li>S3基本上就是弱化的S2，因为没有额外的效果，甚至在人物信息中没有列出，也没有任何应用的场合。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-7" class="section level4 hasAnchor" number="4.1.1.2">
 <h4><span class="header-section-number">4.1.1.2</span> 招牌<a href="斗士系.html#招牌-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>斗擎的招牌被戏称为“真男人”，使之在残血时防御和攻击大幅度增加，由于每回合都能触发，配合同样在残血时威力巨大的S1，只要不死，斗擎经常可以雄风不倒地千里走单骑。在盟战中单体复活药用在他身上十分超值。</p>
+<p><strong>我会带上你们！</strong><a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>：斗擎的招牌被戏称为“真男人”，使之在生命值降以20%以下时护甲增加90%，得到3层近战增益（每层21~44.4%），持续7秒。一次战斗只能触发一次，但即便出场时血量已经不足20%，还是可以触发一次（和震天尊的白球不一样），于是配合同样在残血时威力巨大的S1，只要不死，斗擎经常可以雄风不倒地千里走单骑。在盟战中单体复活药用在他身上十分超值。</p>
 </div>
 <div id="协同-8" class="section level4 hasAnchor" number="4.1.1.3">
 <h4><span class="header-section-number">4.1.1.3</span> 协同<a href="斗士系.html#协同-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>与铁皮搭配，斗擎出流血的层数有概率翻倍。与探长搭配，斗擎在战斗开始时能回血。与大黄蜂同时出战，所有汽车人获得攻击增益并在突袭中提升伤害减益效果。</p>
+<ul>
+<li>敌人（碾碎器，碎骨魔）：加攻</li>
+<li>老朋友（铁皮）：斗擎出流血的层数有概率翻倍。</li>
+<li>医疗支持（探长）：斗擎在战斗开始时能回血，突袭额外修复。</li>
+<li>万众一心（大黄蜂）：斗擎配大黄蜂时，所有队中汽车人获得攻击增益并在突袭中提升伤害减益效果。</li>
+</ul>
 </div>
 <div id="短板-8" class="section level4 hasAnchor" number="4.1.1.4">
 <h4><span class="header-section-number">4.1.1.4</span> 短板<a href="斗士系.html#短板-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>斗擎没有明显的短板，只是相对另一个擎天柱在协同方面没有那么亮眼。这从他们在五星池中登场的早晚也可见一斑。</p>
-<p>后期因为野兽净化组合出现，他的抗流血能力受到了挑战，尤其是在面对纳米流血千斤顶时，如果S技出不了流血，就无法破盾，从而也无法给自己回血。</p>
+<p>斗擎早期虽然比战擎相对弱了一点，但整个电影系都被G1系完美压制，所以也只能怪设计。但他简单的打法在游戏中后期最终还是成了他的短板。他的抗流血能力只能净化多于一层的流血，吃其他DOT时不能回血。野兽净化组合出现后斗擎在突袭小队中也没有了地位，尤其是在面对纳米流血千斤顶时，如果S技出不了流血，就无法破盾，没有输出从而也无法给自己回血。</p>
+<p>他引以为傲的翻盘能力因为只能触发一次，最终在战斗越来越长的游戏生态中输给了同样是靠残血加伤害的汽车大师。</p>
 </div>
 </div>
 <div id="推荐打法-8" class="section level3 hasAnchor" number="4.1.2">
 <h3><span class="header-section-number">4.1.2</span> 推荐打法<a href="斗士系.html#推荐打法-8" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗-8" class="section level4 hasAnchor" number="4.1.2.1">
 <h4><span class="header-section-number">4.1.2.1</span> 短战斗<a href="斗士系.html#短战斗-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>近战缠斗为主，主动获得攻击加成，血量较多时围绕S2打输出，血量少时追求S1的高伤害。</p>
+<p>因为重击没有什么效果，只在打开防御的时候使用，平时使用近战五连攒能量和攻击加成，血量较多时围绕S2打输出，血量少时追求S1的高伤害。</p>
 </div>
 <div id="长战斗-8" class="section level4 hasAnchor" number="4.1.2.2">
 <h4><span class="header-section-number">4.1.2.2</span> 长战斗<a href="斗士系.html#长战斗-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>虽然斗擎在血量低时S1的伤害高，但长战斗最好还是稳妥地先以S2为主，毕竟S1要出了招牌之后才能有更大的提升。</p>
-<p>在盟战中面对流血线路时，要战略性地吃一下（例如连招时的最后一下）近战，再用S技给自己大量回血。</p>
 </div>
 </div>
 <div id="基地防守-8" class="section level3 hasAnchor" number="4.1.3">
@@ -247,27 +259,39 @@
 <!--Note-->
 <div id="特点分析-9" class="section level3 hasAnchor" number="4.2.1">
 <h3><span class="header-section-number">4.2.1</span> 特点分析<a href="斗士系.html#特点分析-9" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>作为游戏第一批人物，碾碎器的角色一直是肉厚型猛汉。</p>
+<p>作为游戏第一批人物，碾碎器一直是游戏中坦克型的代表。</p>
 <div id="能力-9" class="section level4 hasAnchor" number="4.2.1.1">
 <h4><span class="header-section-number">4.2.1.1</span> 能力<a href="斗士系.html#能力-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>碾碎器技能不多。重击在暴击时必然施加燃烧。天然护甲高（17%），受到攻击时被动触发的护甲和降爆让很多流血系角色很难在他身上占到便宜。</p>
+<p><em>碾碎器经过几次平衡性调整，以下合并在一起介绍</em></p>
 <ul>
-<li>S1施加两层降暴，降低对手格挡精通，增大防御伤害。</li>
-<li>主要输出手段是S2，对方能量越多，砍的越多。</li>
-<li>S3乏善可陈，输出太低，无非是暴击燃烧的概率高过普通重击，正常情况没人会使用S3。</li>
+<li>碾碎器天然拥有17%的被动护甲增益，并且不显示出来，从而这一层护甲也不能被破掉。</li>
+<li>被攻击时有概率得到护甲增益，这就让他越被打越肉。</li>
+<li>被攻击时有概率给对方施加暴击机率减益。暴击减少了，对手通过暴击穿透护甲或者暴击制造DOT的概率也就少了。</li>
+<li>对方身上有暴击机率减益层数越多，格挡碾碎器近战攻击吃到的伤害越大。所以面对碾碎器，尽量不要格挡。</li>
+<li>导弹攻击（重击和S3中）在暴击时必然施加燃烧。</li>
+<li>三招S技经过调整有了比较好的控制能力，更好地配合他的招牌
+<ul>
+<li>S1：施加一层暴击机率减益，35%的概率锁6秒S2，75%的概率锁6秒S3</li>
+<li>S2：50%的概率锁6秒S3，对方能量越多，S2砍的伤害越大</li>
+<li>S3：导弹攻击加50%的概率，100%的概率锁10秒S2和S3。并施加一层永久降暴16%（可以叠加三层）</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-8" class="section level4 hasAnchor" number="4.2.1.2">
 <h4><span class="header-section-number">4.2.1.2</span> 招牌<a href="斗士系.html#招牌-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>根据对方的能量提升近战的伤害，属于锦上添花吃招牌的功能。面对高觉醒的碾碎器被他施加降暴后千万小心，防他的特殊技和中招一样疼。</p>
+<p><strong>贯穿</strong>：根据对方的能量提升近战的伤害（75~113%，v8.2大幅提升），属于锦上添花的功能。面对高觉醒的碾碎器被他施加降暴后千万小心，防御和中招一样疼。</p>
+<p>碾碎器的招牌看似作用不大，但是因为他的S技都有锁定对方S技的功能，所以在近战压制型打法时可以更凶狠，不用总想着骗招，因为往往对方就算三格气也出不了S3，如果不放大招，就可以被碾碎器的这个招牌利用能量。</p>
 </div>
 <div id="协同-9" class="section level4 hasAnchor" number="4.2.1.3">
 <h4><span class="header-section-number">4.2.1.3</span> 协同<a href="斗士系.html#协同-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>碾碎器的协同一般，无非是跟路障配合时的第一发重击能锁气。</p>
+<p>碾碎器的协同真的很可怜，只有一个双向，其他都是造福他人。</p>
+<ul>
+<li>法外狂徒（双向：路障）：每局第一发重击能锁气。</li>
+</ul>
 </div>
 <div id="短板-9" class="section level4 hasAnchor" number="4.2.1.4">
 <h4><span class="header-section-number">4.2.1.4</span> 短板<a href="斗士系.html#短板-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>碾碎器的短板在于只有标准式的输出，进攻没有什么别的花样。三招只有一招实用，虽然S2可以打出爆炸式的伤害，并且会随着招牌越来越大，但是没有附加伤害和附加效果，对付护盾和模块会很吃力。另外作为一个输出主要看近战的选手，配的远程重击实在鸡肋。官方已预告8.0中碾碎器会得到加强。</p>
+<p>碾碎器作为敌人算比较肉，但对玩家来说难堪大用。他的短板在于只有标准式的输出，除了导弹能加DOT外，剩下的增伤手段就看招牌等级了，输出显得很单一。</p>
 </div>
 <div id="调整-2" class="section level4 hasAnchor" number="4.2.1.5">
 <h4><span class="header-section-number">4.2.1.5</span> 8.0调整<a href="斗士系.html#调整-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -277,16 +301,14 @@
 <h4><span class="header-section-number">4.2.1.6</span> 2019年10月3日调整<a href="斗士系.html#年10月3日调整" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>招牌的伤害提高</li>
-<li>S1：35%的概率锁6秒S2，75%的概率锁6秒S3</li>
-<li>S2：50%的概率锁6秒S3</li>
-<li>S3：100%的概率锁10秒S2和S3。并施加一层永久降暴16%（可以叠加三层）</li>
+<li>三个S技都加入了锁定对方S技的能力。不过这样调整之后平时还要多点思考，易用性降低了一些。</li>
 </ul>
 </div>
 </div>
 <div id="推荐打法-9" class="section level3 hasAnchor" number="4.2.2">
 <h3><span class="header-section-number">4.2.2</span> 推荐打法<a href="斗士系.html#推荐打法-9" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>无论是短战斗还是长战斗，碾碎器基本没有什么特别的打法，就是围绕s2打输出。虽然重击和他的打法不是特别匹配，但是因为远程重击命中后离对手不远，所以在短战斗也可以搏一搏压起身。
-经过调整加入了锁特殊技后，碾碎器在战斗中可以更加放心地使用S2和招牌来利用对手的能量打伤害，只是要记住一旦打红，那即便锁定了S技也得骗招。跟路障搭配的时候，每场第一发重击可以锁能量，要善加利用。S3由于可以施加永久降暴，相应地可以提升碾碎器屈防时的伤害，长战斗中可以考虑先来一次S3。</p>
+<p>无论是短战斗还是长战斗，碾碎器基本没有什么特别的打法，就是围绕s2打输出。虽然重击和他的打法不是特别匹配，但是因为远程重击命中后离对手不远，所以在短战斗也可以搏一搏压起身。</p>
+<p>经过调整加入了锁特殊技后，碾碎器在战斗中可以更加放心地使用S2和招牌来利用对手的能量打伤害。只是要记住别等打红再锁，除非你已经攒着一个S3。长战斗也别为了招牌的增伤把对方能量堆太高，还是要稳扎稳打。跟路障搭配的时候，每场第一发重击可以锁能量，要善加利用。S3由于可以施加永久降暴，相应地可以提升碾碎器屈防时的伤害，长战斗中可以考虑先来一次S3。</p>
 </div>
 <div id="基地防守-9" class="section level3 hasAnchor" number="4.2.3">
 <h3><span class="header-section-number">4.2.3</span> 基地防守<a href="斗士系.html#基地防守-9" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -327,7 +349,11 @@
 </div>
 <div id="短板-10" class="section level4 hasAnchor" number="4.3.1.4">
 <h4><span class="header-section-number">4.3.1.4</span> 短板<a href="斗士系.html#短板-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>主要还是因为打法侵略性容易造成头脑发热，吃到不必要的伤害。重击施加哪种减益不可控，所以缺少有效的控制方式。另外没有抗流血和净化，在面对碎骨魔、犀牛之流时少不了吃反伤。</p>
+<ul>
+<li>因为汽车大师压起身成功率不高，容易被侧闪反击，所以压制型打法往往要硬冲子弹容易吃到不必要的伤害。</li>
+<li>重击施加哪种减益不可控，所以缺少有效的控制方式。</li>
+<li>输出没有太多花样，除了小枪和S1，都是物理输出，另外没有抗流血和净化，在面对碎骨魔、犀牛之流时少不了吃反伤。</li>
+</ul>
 </div>
 </div>
 <div id="推荐打法-10" class="section level3 hasAnchor" number="4.3.2">
@@ -339,7 +365,8 @@
 </div>
 <div id="长战斗-9" class="section level4 hasAnchor" number="4.3.2.2">
 <h4><span class="header-section-number">4.3.2.2</span> 长战斗<a href="斗士系.html#长战斗-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>汽车大师虽然蛮横，但在长战斗中只要操作得当，保证不吃伤害，可以有很大的输出。这时还是用牵制与侧闪战术，四连一撞不要用得过于频繁，以免对方用S技来破重击。盟战中死亡后使用10%的单体复活即可，打开一个暗杀加成，可以搏很高的输出。</p>
+<p>汽车大师虽然蛮横，但高手只要操作水平提升后不依赖霸体就是了。在长战斗中只要操作得当，少吃伤害，可以有很大的输出。这时还是用牵制与侧闪战术，四连一撞不要用得过于频繁，以免对方用S技来破重击。</p>
+<p>对于初等和中等玩家来说，汽车大师在战斗中的磨损和意外很容易让他处于残血状态，用来开发他的招牌。高级盟战中死亡后使用10%的单体复活即可，打开一个暗杀加成，可以搏很高的输出。但对于一些操作轻轻松松上100连击以上的高手来说，他们对<strong>追星者</strong>精通的利用非常执着，不可能先主动挨打（100难度的盟战挨一套也就死了），也不能吃小枪断连击数，血量也就是极为不利的时候防御一下，但不屑于主动防御来降血。这时，一直都没什么用的S3就有了用武之地：先一直用S3，把自己的血扣下来再说。</p>
 </div>
 </div>
 <div id="基地防守-10" class="section level3 hasAnchor" number="4.3.3">
@@ -355,23 +382,39 @@
 <!--Note-->
 <div id="特点分析-11" class="section level3 hasAnchor" number="4.4.1">
 <h3><span class="header-section-number">4.4.1</span> 特点分析<a href="斗士系.html#特点分析-11" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>钢锁的发布在一定程度上夺走了斗擎“流血克星”的风头，因为他的招牌不但能净化流血还能净化其他伤害减益（DOT）。</p>
+<p>钢锁的发布在一定程度上夺走了斗擎“流血克星”的风头，因为他的招牌不但能净化流血还能净化其他伤害减益（DOT）。钢锁和汽车大师一样，属于拿着剑但砍不出流血的“非剑圣”。</p>
 <div id="能力-11" class="section level4 hasAnchor" number="4.4.1.1">
 <h4><span class="header-section-number">4.4.1.1</span> 能力<a href="斗士系.html#能力-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>进攻对手或者S2和S3时会获得攻击加成，重击和S1能燃烧，变龙时（重击和特殊攻击）不承受任何伤害并刷新身上的攻击加成。</p>
+<ul>
+<li>受到攻击时会有概率（8~14%）得到攻击加成（9~14%），可堆积。</li>
+<li>重击或S技时可以刷新所有堆积的加成层数，只要有耐心堆，似乎没有上限</li>
+<li>重击时会出霸体，重击命中有40~63%的概率施加燃烧，40~50%的伤害，持续2秒</li>
+<li>钢锁是唯一一位每个S技都变形的机器人<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>，三招S技都会获得一层攻击加成：
+<ul>
+<li>S1：100%施加燃烧</li>
+<li>S2：获得攻击加成</li>
+<li>S3：100%施加燃烧并获得攻击加成</li>
+</ul></li>
+<li>钢锁之前的能力描述中有提到变成龙形时不受任何伤害，后来不知道何时省去了这段描述。事实上用重击去怼对方的子弹或者S技确实是不受伤害，但顶着逆火放S技还是会吃伤害。</li>
+</ul>
 </div>
 <div id="招牌-10" class="section level4 hasAnchor" number="4.4.1.2">
 <h4><span class="header-section-number">4.4.1.2</span> 招牌<a href="斗士系.html#招牌-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>净化所有DOT，并转换为同等数目的攻击加成。突袭中钢锁面对流血模块尤其是流血纳米千（血纳千）很有心得。不过净化触发略慢一拍，还是会承受一定伤害，所以建议吃到DOT时尽快变形阻止伤害。</p>
+<p><strong>恐龙之怒</strong>：吃到DOT后一秒净化，并转换为同等数目的攻击加成，加攻比例与招牌等级挂钩（每层8.7~30%）。突袭中钢锁面对流血模块尤其是流血纳米千（血纳千）很有心得。不过净化触发略慢一拍，还是会承受一定伤害，所以建议吃到DOT时尽快变形阻止伤害。</p>
+<p>如果觉醒很高，一直用刷新保持加攻堆积，钢锁的伤害是很恐怖的。</p>
 </div>
 <div id="协同-11" class="section level4 hasAnchor" number="4.4.1.3">
 <h4><span class="header-section-number">4.4.1.3</span> 协同<a href="斗士系.html#协同-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>钢锁除了基础的加攻加护甲，没有什么特色协同。</p>
+<p>钢锁没有什么特色协同：</p>
+<ul>
+<li>盟友（双向：战擎，通天晓，小黄蜂，爵士）：加护甲</li>
+<li>敌人（双向：汽车大师，反冲）：加攻</li>
+</ul>
 </div>
 <div id="短板-11" class="section level4 hasAnchor" number="4.4.1.4">
 <h4><span class="header-section-number">4.4.1.4</span> 短板<a href="斗士系.html#短板-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>钢锁基础输出不高，要靠刷新攻击buff的方式来弥补。但这也是他打法矛盾的地方，因为这让钢锁的打法偏向远近结合，无法最大化利用近战伤害，只能寄希望于重击时概率施加燃烧来补充。</li>
+<li>钢锁基础输出不高，要靠刷新攻击buff的方式来弥补。但这也是他打法矛盾的地方，因为这让钢锁的打法偏向远近结合，有机会也得四连一重击，而不能用五连的方式进行近战缠斗快速堆到S2（S2对近战伤害的利用特别大），只能寄希望通过燃烧来补充输出。</li>
 <li>也许是因为变龙可以不受伤害，也许是因为钢锁已然拥有游戏中第一的血量，钢锁在斗士中居然没有护甲能力。</li>
 <li>此外，单兵强，协同差，也让钢锁的应用场合受到了限制。</li>
 </ul>
@@ -418,18 +461,27 @@
 <div id="能力-12" class="section level4 hasAnchor" number="4.5.1.1">
 <h4><span class="header-section-number">4.5.1.1</span> 能力<a href="斗士系.html#能力-12" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>猩猩队长自带令人头痛的黄色护盾，100%的暴击抗性，让他防守时克制了很多类别（爆破，战士和侦查）。重击后会将护甲转换为攻击，让他行进攻时有很多花样。S1拥有复仇式的流血能力，没有吃到流血时就没有必要使用了。s2是主要的进攻手段，但是s2经常容易连招打空。S3适合长战斗。</li>
-<li>除了牺牲护甲可以加攻，在对手防御时也会随机获得加攻，所以猩猩在屈防对手时一定多打几下，而不要急于放重击。</li>
+<li>猩猩队长自带令人头痛的黄色护甲，100%的暴击抗性，让他防守时克制了很多类别（爆破，战士和侦查）。</li>
+<li>开局带着一层护甲（2~4%），被攻击的时候有概率再次获得，最大10层。处于破甲状态时不会获得。</li>
+<li>重击后会将护甲转换为攻击加成，每层加攻10~18%，6秒后继续得到一层护甲。处于破甲状态时不会获得。也就是说如果被战擎或者战威施加永久破甲，再重击放掉护甲后，猩猩就再也没有护甲了。</li>
 <li>猩猩的重击是一种神奇的存在：不会被声波反弹，会触发碎骨魔被动流血，像近战；但是又会被阿尔茜规避掉，像远程。</li>
+<li>三个S技各有各的作用：
+<ul>
+<li>S1拥有复仇式的流血能力，没有吃到流血时就没有必要使用了</li>
+<li>S2是主要的进攻手段，每次刀刃进攻有概率流血，但是要注意S2有可能在连招中连不上</li>
+<li>S3得到10层护甲，对对手施加长时减攻，适合长战斗</li>
+</ul></li>
+<li>除了牺牲护甲可以加攻，在对手防御近战普攻时也会30%概率获得加攻（10~18%），可多层。所以猩猩在屈防对手时一定多打几下，而不要急于放重击。</li>
 </ul>
 </div>
 <div id="招牌-11" class="section level4 hasAnchor" number="4.5.1.2">
 <h4><span class="header-section-number">4.5.1.2</span> 招牌<a href="斗士系.html#招牌-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>招牌是根据自己身上护甲的数目，加速dot的过期。并且每过期一个流血减益，就进行一定程度的自我修复。流血类机器人面对高觉醒的猩猩，经常会有越打血越多的痛苦。因为回血只针对流血DOT，对玩家来说，只要组野兽净化对，就不需要特别在意猩猩是否觉醒。</p>
+<p>招牌是根据自己身上护甲的数目，加速DOT的过期。并且每过期一个流血减益，就进行一定程度的自我修复（无需身上有护甲，所以这一点反克了觉醒战擎的脱衣打法）。流血类机器人面对高觉醒的猩猩，经常会有越打血越多的痛苦。因为回血只针对流血DOT，对玩家来说，只要组野兽净化对，就不需要特别在意猩猩是否觉醒。</p>
 </div>
 <div id="beast-purification" class="section level4 hasAnchor" number="4.5.1.3">
 <h4><span class="header-section-number">4.5.1.3</span> 协同<a href="斗士系.html#beast-purification" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>野兽净化（俗称动物园）：猩猩队长搭配两个野兽角色，就能使所有人的重击净化一切伤害减益，这使得他们在面对各类伤害减益模块的时候，非常有安全感，是突袭的不二选择，盟战中也有很大的优势。</p>
+<p>游戏的六名野兽们之间全部是双向协同：盟友加护甲，敌人加攻。</p>
+<p>野兽净化（俗称动物园）：猩猩队长搭配两个或以上野兽角色，就能使所有野兽角色的重击立即净化一切伤害减益，这使得他们在面对各类伤害减益模块的时候非常有安全感，是突袭的不二选择，盟战中也有很大的优势。</p>
 </div>
 <div id="短板-12" class="section level4 hasAnchor" number="4.5.1.4">
 <h4><span class="header-section-number">4.5.1.4</span> 短板<a href="斗士系.html#短板-12" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -444,7 +496,7 @@
 </div>
 <div id="长战斗-11" class="section level4 hasAnchor" number="4.5.2.2">
 <h4><span class="header-section-number">4.5.2.2</span> 长战斗<a href="斗士系.html#长战斗-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>上来直奔第一个S3而去，不要放重击。在气红前放重击马上接S3，最大化输出。然后守住10层护甲围绕S2打输出，不要贸然使用重击，如果配有净化协同，则吃到dot时放重击。猩猩不放重击的话输出受限制，需要更多耐心。</p>
+<p>上来直奔第一个S3而去，不要放重击。在气红前放重击马上接S3，最大化输出。然后守住10层护甲围绕S2打输出，不要贸然使用重击，如果配有净化协同，则吃到DOT时放重击。猩猩不放重击的话输出受限制，需要更多耐心。</p>
 </div>
 </div>
 <div id="基地防守-12" class="section level3 hasAnchor" number="4.5.3">
@@ -505,7 +557,7 @@
 <!--Note-->
 <div id="特点分析-14" class="section level3 hasAnchor" number="4.7.1">
 <h3><span class="header-section-number">4.7.1</span> 特点分析<a href="斗士系.html#特点分析-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
+<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
 <p>虽然惊天雷是斗士让人有点费解，但是这个“红蜘蛛重涂”自一登场就让人觉得有点霸气外露。</p>
 <p>在泰坦货币商店中惊天雷的价格是17万。</p>
 <div id="能力-14" class="section level4 hasAnchor" number="4.7.1.1">
@@ -604,15 +656,15 @@
 <p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。</p>
 <p>从设计上看这是又一个电脑受益巨大，玩家基本上用不到的招牌，毕竟1、玩家要高觉醒不容易；2、玩家不希望挨打；3、谁愿意到了3个血量档位还主动挨打？</p>
 <p>有人也许会说，这种招牌是不是可以让电脑因为怕反伤而手下留情，从而起到保命的作用？事实上在铁皮月的展示任务最后一周，我体验了一下满觉醒的铁皮，发现电脑才不管你有没有出招牌，就算反伤到死，也根本不会停手！</p>
-<p>而电脑一旦高觉醒……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>。</p>
+<p>而电脑一旦高觉醒……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>。</p>
 </div>
 <div id="协同-14" class="section level4 hasAnchor" number="4.8.1.3">
 <h4><span class="header-section-number">4.8.1.3</span> 协同<a href="斗士系.html#协同-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>铁皮的协同真的是比较可怜，没有人专门给他授益。</p>
 <ul>
 <li>挽歌，闹翻天（相互）：加攻击2~8%。这协同就是新人物光环啊。</li>
-<li>警车（相互）：对抗霸天虎时加攻2~12%，然而实际应用到组队的时候写着加攻90%，战斗中也确实如此（仅限三星铁皮，应该是个bug）！</li>
+<li>警车（相互）：对抗霸天虎时加攻2~12%，然而实际应用到组队的时候写着加攻90%，战斗中也确实如此（仅限三星铁皮，应该是个bug，<strong>现已修复</strong>）</li>
 </ul>
-<p>铁皮的协同真的是比较可怜，没有人专门给他授益。</p>
 </div>
 <div id="短板-15" class="section level4 hasAnchor" number="4.8.1.4">
 <h4><span class="header-section-number">4.8.1.4</span> 短板<a href="斗士系.html#短板-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -641,9 +693,11 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="3">
-<li id="fn3"><p>我也多次提到了这个消息，传来传去，加上卡邦很长时间都没怎么投入开发百炼，以至于很多人都信了。事实上，就算是出一个重涂的角色也是需要版权的。直到2022年出了G1铁皮和补天士，也推翻了“没版权，所以只能出重涂”这个说法<a href="斗士系.html#fnref3" class="footnote-back">↩︎</a></p></li>
-<li id="fn4"><p>事实上2022年4月14日上线的特殊任务里面的铁皮带了修复计时模块，配合他厚厚的护甲，反复修复到血量档位以上，反复触发招牌，让人非常头疼。<a href="斗士系.html#fnref4" class="footnote-back">↩︎</a></p></li>
+<ol start="4">
+<li id="fn4"><p>英文原意”I’ll take you all on!“是斗擎在电影中的台词，想表达的是“我一个人单挑你们全部”<a href="斗士系.html#fnref4" class="footnote-back">↩︎</a></p></li>
+<li id="fn5"><p>也是唯一一个用变形形态做头像的<a href="斗士系.html#fnref5" class="footnote-back">↩︎</a></p></li>
+<li id="fn6"><p>我也多次提到了这个消息，传来传去，加上卡邦很长时间都没怎么投入开发百炼，以至于很多人都信了。事实上，就算是出一个重涂的角色也是需要版权的。直到2022年出了G1铁皮和补天士，也推翻了“没版权，所以只能出重涂”这个说法<a href="斗士系.html#fnref6" class="footnote-back">↩︎</a></p></li>
+<li id="fn7"><p>事实上2022年4月14日上线的特殊任务里面的铁皮带了修复计时模块，配合他厚厚的护甲，反复修复到血量档位以上，反复触发招牌，让人非常头疼。<a href="斗士系.html#fnref7" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
