--- a/chars_book/术语与打法.html
+++ b/chars_book/术语与打法.html
@@ -128,6 +128,7 @@
 <li class="chapter" data-level="6.6" data-path="侦查系.html"><a href="侦查系.html#反冲"><i class="fa fa-check"></i><b>6.6</b> 反冲<span></span></a></li>
 <li class="chapter" data-level="6.7" data-path="侦查系.html"><a href="侦查系.html#黄豹"><i class="fa fa-check"></i><b>6.7</b> 黄豹<span></span></a></li>
 <li class="chapter" data-level="6.8" data-path="侦查系.html"><a href="侦查系.html#爵士"><i class="fa fa-check"></i><b>6.8</b> 爵士<span></span></a></li>
+<li class="chapter" data-level="6.9" data-path="侦查系.html"><a href="侦查系.html#滑流"><i class="fa fa-check"></i><b>6.9</b> 滑流<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="科技系.html"><a href="科技系.html"><i class="fa fa-check"></i><b>7</b> <img src="images/Tech-small.png" style="height:0.6cm" />科技系<span></span></a>
 <ul>
