--- a/FOC.html
+++ b/FOC.html
@@ -20,7 +20,7 @@
 点击各个节点人物，查看模块与对策。
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.0/dist/mermaid.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: true });</script>
 
     <div class="mermaid">
