--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <h1 class="title">百炼为战信息小站</h1>
     <!-- </div> -->
-    <p>kmcbest.ga 域名即将过期，请收藏新域名<a href=https://kmcbest-github-io.vercel.app/>https://kmcbest-github-io.vercel.app</a></p>
+    <p>新的简域名<a href=https://kmcbest.tk>kmcbest.tk</a>已启用，原域名<a href=https://kmcbest-github-io.vercel.app/>https://kmcbest-github-io.vercel.app</a>保持不变</p>
     <ul>
         <li><a href="chars_book/index.html">全人物解析</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
